Changed the token from 'Add satellite messaging' to 'Learn More'.
Flag: EXEMPT bugfix
Bug: 367377460
Test: Verified the UI Manually
Change-Id: Ieba6dc32dbedaea98fe39a8bb081f3562d8eeb6e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12142,8 +12142,8 @@
     <string name="title_have_satellite_plan">Satellite messaging is included with your account</string>
     <!-- Title for category "Your mobile plan when satellite is not included in plan" [CHAR_LIMIT=NONE] -->
     <string name="title_no_satellite_plan">Satellite messaging isn\u2019t included with your account</string>
-    <!-- text view add satellite messaging" [CHAR_LIMIT=NONE] -->
-    <string name="summary_add_satellite_setting">Add satellite messaging</string>
+    <!-- text view "Learn more" [CHAR_LIMIT=NONE] -->
+    <string name="summary_add_satellite_setting">Learn More</string>
     <!-- Category name "How it works" [CHAR_LIMIT=NONE] -->
     <string name="category_name_how_it_works">How it works</string>
     <!-- Title for satellite connection guide [CHAR_LIMIT=NONE] -->
