Add contacts storage setting entry in app settings page.
Test: atest SettingsRoboTests:com.android.settings.applications.contacts.ContactsStoragePreferenceControllerTest

Bug: 368641291
Flag: com.android.settings.flags.enable_contacts_default_account_in_settings

Change-Id: I8da16f24b17e44dc0ea417cffabd85c36d7edc5f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13668,4 +13668,11 @@
 
     <!-- Text for Search bar of Settings home screen [CHAR LIMIT=34] -->
     <string name="homepage_search">Search Settings</string>
+
+    <!-- Keywords for contacts storage item [CHAR LIMIT=NONE] -->
+    <string name="keywords_contacts_storage">contacts, storage, account</string>
+    <!-- Text for Contacts Storage Settings title [CHAR LIMIT=50]-->
+    <string name="contacts_storage_settings_title">Contacts storage</string>
+    <!-- Text for displaying when no account is set as default account [CHAR LIMIT=50] -->
+    <string name="contacts_storage_no_account_set">No default set</string>
 </resources>
