[Physical Keyboard] Add Repeat key toggle
Add repeat key toggle under Physical keybaord setting.

Bug: 345399212
Test: atest SettingsRoboTests
Flag: com.android.input.flags.keyboard_repeat_keys
Change-Id: Ib986301d108b1ad30d96d7309189e9507d38c25a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4696,6 +4696,10 @@
     <string name="keyboard_a11y_settings">Physical keyboard accessibility</string>
     <!-- Summary for the button to trigger the 'Physical keyboard accessibility' page. [CHAR LIMIT=NONE] -->
     <string name="keyboard_a11y_settings_summary">Sticky keys, Bounce keys, Mouse keys</string>
+    <!-- Title for the keyboard repeat key option. [CHAR LIMIT=60] -->
+    <string name="keyboard_repeat_key_title">Repeat Keys</string>
+    <!-- Summary for the keyboard repeat key option. [CHAR LIMIT=NONE] -->
+    <string name="keyboard_repeat_key_summary">Hold down a key to repeat its character until the key is released</string>
 
     <!-- Title text for per IME subtype keyboard layout. [CHAR LIMIT=35] -->
     <string name="ime_label_title"><xliff:g id="ime_label" example="Gboard">%s</xliff:g> layout</string>
