Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I75cbfc5fb76ebd2a8d037a61ec74fcfe88e7948d

--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Падключацца да сэрвісаў перадачы даных у роўмінгу"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Падключацца да сэрвісаў перадачы даных у роўмінгу"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Можа спаганяцца плата за роўмінг."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Аўтавызначэнне даты і часу"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Задаваць аўтаматычна, выкарыстоўваючы сігналы сеткі і бесправадныя сігналы прылады"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Аўтавызначэнне часавага пояса"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Задаваць аўтаматычна па даных бліжэйшых мабільных сетак"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Задаваць аўтаматычна па месцазнаходжанню прылады, калі яно вызначаецца. Можа спатрэбіцца актыўнае падключэнне да Wi-Fi."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Выкарыстоўваць стандартныя рэгіянальныя налады"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Выкарыстоўваць 24-гадзінны фармат"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Час"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Узор разблакіроўкі для прыват. прасторы"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Блакіроўка"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Хаванне"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Вы можаце дадаць да <xliff:g id="COUNT">%d</xliff:g> адбіткаў пальца"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы дадалі максімальную колькасць адбіткаў пальцаў"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Немагчыма дадаць больш адбіткаў пальцаў"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Праверце пароль і паўтарыце спробу"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Звярніцеся да вытворцы прылады"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Праверце падключэнне і паўтарыце спробу"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Выбраць сетку"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Каб падключыць прыладу, выберыце сетку"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Дадаць гэту прыладу да сеткі \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Дазвольце праграмам і сэрвісам шукаць прылады паблізу, нават калі Bluetooth выключаны. Гэту функцыю можна выкарыстоўваць для паляпшэння працы геасэрвісаў."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Службы геалакацыі"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Службы геалакацыі"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Вызначаць часавы пояс па даным аб месцазнаходжанні"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Не ўдалося задаць часавы пояс аўтаматычна"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Вызначэнне месцазнаходжання або службы геалакацыі выключаны"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Налады месцазнаходжання"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Выправіць"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Скасаваць"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Недаступна, калі аўтаматычнае вызначэнне часавага пояса выключана"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Вызначэнне часавага пояса месцазнаходжання выключана"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Вызначэнне часавага пояса месцазнаходжання не падтрымліваецца"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Не дазволена змяняць вызначэнне часавага пояса месцазнаходжання"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Калі на прыладзе ўключана вызначэнне месцазнаходжання, яно можа выкарыстоўвацца для наладжвання часавага пояса"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Прагледзець юрыдычную інфармацыю, стан, вэрсіі праграмнага забяспечання"</string>
     <string name="legal_information" msgid="7509900979811934843">"Юрыдычная інфармацыя"</string>
     <string name="manual" msgid="3651593989906084868">"Кіраўніцтва"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Зразумела"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Апавяшчэнні"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Працягласць"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Паведамленні, падзеі і напаміны"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Калі ўключаны рэжым \"Не турбаваць\", выключаецца гук для паведамленняў, напамінаў і падзей, акрамя выбраных вышэй элементаў. Вы можаце змяніць налады паведамленняў, каб дазволіць сябрам, членам сям’і і іншым кантактам звязацца з вамі."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Гатова"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Налады"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Апавяшчэнні без візуальных элементаў і гуку"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Апавяшчэнні без гуку"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Апавяшчэнні не будуць паказвацца ці гучаць. Дазволены выклікі ад пазначаных кантактаў і абанентаў, якія выклікаюць паўторна."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Бягучая налада)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Змяніць налады апавяшчэнняў у рэжыме \"Не турбаваць\"?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Гукі працоўнага профілю"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Выкарыстоўваць гукі асабістага профілю"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Выкарыстоўваць тыя самыя гукі, што і ў асабістым профілі"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Пасля разблакіроўкі вяртацца на апошні экран. Апавяшчэнні не будуць паказвацца на экране блакіроўкі. Каб праглядзець іх, правядзіце зверху ўніз."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Экран блакіроўкі, экран блакіроўкі, прапусціць, абысці"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Працоўны профіль заблакіраваны"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Памяншэнне колькасці апавяшчэнняў на экране блакіроўкі"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Паказваць менш апавяшчэнняў на экране блакіроўкі"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Паказваць на экране блакіроўкі толькі новыя апавяшчэнні"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Аўтаматычна выдаляць прагледжаныя апавяшчэнні з экрана блакіроўкі"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Апавяшчэнні на экране блакіроўкі"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"прыярытэтныя размовы"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Ніякія"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ніводнай}=1{1 размова}one{# размова}few{# размовы}many{# размоў}other{# размовы}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Налады размоў"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"На што гэты рэжым не распаўсюджваецца"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Нават калі праграмы абмену паведамленнямі ці выклікаў не могуць адпраўляць вам апавяшчэнні, карыстальнікі, якіх вы выбераце тут, усё роўна змогуць звязвацца з вамі праз гэтыя праграмы"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Выклікі"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Любыя"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Кантакты"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Пазначаныя кантакты"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Налады кантактаў"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Налады пазначаных кантактаў"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Няма"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Ніякія"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Сігналы будзільніка"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Рэжым \"Не турбаваць\" распаўсюджваецца на ўсе праграмы}=1{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграму \"{app_1}\"}=2{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\" і \"{app_2}\"}=3{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\", \"{app_2}\" і \"{app_3}\"}one{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\", \"{app_2}\" і яшчэ на # праграму}few{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\", \"{app_2}\" і яшчэ на # праграмы}many{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\", \"{app_2}\" і яшчэ на # праграм}other{Рэжым \"Не турбаваць\" не распаўсюджваецца на праграмы \"{app_1}\", \"{app_2}\" і яшчэ на # праграмы}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (праца)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Вядзецца падлік…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Налады праграм"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дазволіць праграмам перавызначаць"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Гэты рэжым не распаўсюджваецца на наступныя праграмы"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Стварыць рэжым"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Карыстальніцкі рэжым"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Назва рэжыму"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Выбар значка"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Падзеі ў календары"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Парадак дзеянняў перад сном"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"За рулём"</string>
@@ -3977,13 +3977,10 @@
     <string name="opening_paragraph_delete_profile_unknown_company" msgid="2951348192319498135">"Гэты працоўны профіль знаходзіцца пад кіраваннем:"</string>
     <string name="managing_admin" msgid="2633920317425356619">"Пад кіраваннем <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Адкрываць стандартна"</string>
-    <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Адкрыць спасылкі, якія падтрымліваюцца"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Адкрываць спасылкі, якія падтрымліваюцца"</string>
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"У праграме"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"У браўзеры"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Выберыце, як гэта праграма будзе адкрываць вэб-спасылкі"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Спасылкі, якія будуць адкрывацца ў гэтай праграме"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Спасылкі, якія падтрымліваюцца"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Іншыя стандартныя налады"</string>
@@ -5453,10 +5450,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Сканер QR-кодаў"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Патрабуецца дапамога?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Шукаць у наладах"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"кантакты, сховішча, уліковы запіс"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Сховішча кантактаў"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Стандарт не вызначаны"</string>
 </resources>
