--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"በእንቅስቃሴ ላይ ሲሆን ወደ ውሂብ አገልግሎቶች ተያያዝ"</string>
     <string name="roaming_disable" msgid="729512894708689604">"በእንቅስቃሴ ላይ ሲሆን ወደ ውሂብ አገልግሎቶች ተያያዝ"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"የዝውውር ክፍያዎች ሊተገበሩ ይችላሉ።"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"ራስ-ሰር ቀን እና ሰዓት"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"አውታረ መረቡን እና ገመድ አልባ ምልክቶችን በመጠቀም በራስ-ሰር ያቀናብሩ"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"ራስ-ሰር የሰዓት ሰቅ"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"በአቅራቢያዎ ባሉ የተንቀሳቃሽ ስልክ አውታረ መረቦች መሰረት በራስ-ሰር ያቀናብሩ"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"የሚገኝ ከሆነ የመሣሪያዎን አካባቢ በመጠቀም በራስ-ሰር ያቀናብሩ። እንዲሁም ንቁ የWifi ግንኙነት ሊያስፈልግ ይችላል።"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"የቋንቋ ነባሪ ይጠቀሙ"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24 ሰዓት ቅርፀት ተጠቀም"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"ሰዓት"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ለግል ቦታዎ የሚሆን ስርዓተ ጥለት ያዘጋጁ"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ቆልፍ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"ደብቅ"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"እስከ <xliff:g id="COUNT">%d</xliff:g> የሚደርሱ የጣት አሻራዎችን ማከል ይችላሉ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"የሚፈቀደውን ከፍተኛ የጣት አሻራ ብዛት አክለዋል"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ተጨማሪ የጣት አሻራዎችን ማከል አይቻልም"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"የይለፍ ቃሉን ይፈትሹ እና እንደገና ይሞክሩ"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"የመሣሪያውን አምራች ያነጋግሩ"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"ግንኙነትን ይፈትሹና እንደገና ይሞክሩ"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"አውታረ መረብ ይምረጡ"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"የእርስዎን መሣሪያ ለማገናኘት አውታረ መረብ ይምረጡ"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"ይህ መሣሪያ ወደ «<xliff:g id="SSID">%1$s</xliff:g>» ይታከል?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"ብሉቱዝ ጠፍቶ ቢሆንም እንኳ በማንኛውም ጊዜ መተግበሪያዎች እና አገልግሎቶች በአቅራቢያ ያሉ መሣሪያዎችን እንዲቃኙ ይፍቀዱ። ይህ ለምሳሌ በአካባቢ ላይ የተመሠረቱ ባሕሪያትን እና አገልግሎቶችን ለማሻሻል ጥቅም ላይ ሊውል ይችላል።"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"የአካባቢ አገልግሎቶች"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"የአካባቢ አገልግሎቶች"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"አካባቢን ለሰዓት ሰቅ ተጠቀም"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"የጊዜ ሰቁን በራስ-ሰር ማቀናበር አልተቻለም"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"አካባቢ ወይም የአካባቢ አገልግሎቶች ጠፍተዋል"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"የአካባቢ ቅንብሮች"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"ይህን ጠግን"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"ይቅር"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"ራስ-ሰር የሰዓት ሰቅ በሚጠፋበት ጊዜ አይገኝም"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"የአካባቢ የሰዓት ሰቅ ማወቂያ ተሰናክሏል"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"የአካባቢ የሰዓት ሰቅ ማወቂያ አይደገፍም"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"የአካባቢ የሰዓት ሰቅ ማወቂያ ለውጦች አይፈቀዱም"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"የመሣሪያዎ አካባቢ የሚገኝ ከሆነ የእርስዎን የሰዓት ሰቅ ለማቀናበር ጥቅም ላይ ሊውል ይችላል"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"የሕግ መረጃ፣ኹነታ፣ የሶፍትዌር ሥሪት እይ"</string>
     <string name="legal_information" msgid="7509900979811934843">"የህግ መረጃ"</string>
     <string name="manual" msgid="3651593989906084868">"መመሪያ"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"ገብቶኛል"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"ማሳወቂያዎች"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"የቆይታ ጊዜ"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"መልዕክቶች፣ ክስተቶች እና አስታዋሾች"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"አትረብሽ ሲበራ ከላይ ከሚፈቅዷቸው ንጥሎች በስተቀር መልዕክቶች፣ አስታዋሾች እና ክስተቶች ድምጸ-ከል ይደረግባቸዋል። የእርስዎ ጓደኛዎች፣ ቤተሰብ እና ሌሎች እውቂያዎች እርስዎን ማግኘት እንዲችሉ የመልዕክት ቅንብሮችን ማስተካከል ይችላሉ።"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"ተከናውኗል"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"ቅንብሮች"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"ማሳወቂያዎች ላይ ምንም ምስሎች ወይም ድምፅ የለም"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"ከማሳወቂያዎች ምንም ድምፅ የለም"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"ማሳወቂያዎችን አያዩም ወይም አይሰሙም። ኮከብ ከተደረገባቸው እውቂያዎች የሚመጡ ጥሪዎች እና ድጋሚ ደዋዮች ይፈቀዳሉ።"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(የአሁን ቅንብር)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"የአትረብሽ ማሳወቂያ ቅንብሮች ይቀየሩ?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"የስራ መገለጫ ድምጾች"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"የግል መገለጫ ድምጾችን ይጠቀሙ"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"እንደ የግል መገለጫዎ ያለ ተመሳሳይ ድምፆችን ይጠቀሙ"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"ከከፈቱ በኋላ በቀጥታ መጨረሻ ላይ ሥራ ላይ ወደዋለው ማያ ገፅ ይሂዱ። ማሳወቂያዎች በማያ ገፅ ቁልፍ ላይ አይታዩም። እነርሱን ለማየት ከላይ ወደታች ያንሸራትቱ።"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"የማያ ገፅ ቁልፍ፣ የማያ ገፅ ቁልፍ፣ ዝለል፣ እለፍ"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"የሥራ መገለጫ ሲቆለፍ"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"የማያ ገፅ ቁልፍ ማሳወቂያ አነስተኛ አጠቃቀም"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"ማያ ገፅ ቁልፍ ላይ በቁጥር ያነሱ ማሳወቂያዎችን አሳይ"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"በማያ ገፅ ቁልፍ ላይ አዲስ ማሳወቂያዎችን ብቻ ያሳዩ"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"ከዚህ ቀደም የታዩ ማሳወቂያዎችን ከማያ ገፅ ቁልፍ ያስወግዱ"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"በማያ ገፅ ቁልፍ ላይ ማሳወቂያዎች"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"ቅድሚያ የሚሰጣቸው ውይይቶች"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"ምንም"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{ምንም}=1{1 ውይይት}one{# ውይይቶች}other{# ውይይቶች}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"የውይይቶች ቅንብሮች"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"ማን አቋርጦ መግባት ይችላል"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"ምንም እንኳን የመልዕክት መላላኪያ ወይም የመደወያ መተግበሪያዎች እርስዎን ማሳወቅ ባይችሉም፣ እዚህ የሚመርጧቸው ሰዎች አሁንም በእነዚያ መተግበሪያዎች ሊያገኙዎት ይችላሉ።"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"ጥሪዎች"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"ማንኛውም ሰው"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"እውቂያዎች"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"ባለኮከብ ዕውቂያዎች"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"የዕውቂያዎች ቅንብሮች"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"ኮከብ የተደረገባቸው ዕውቂያዎች ቅንብሮች"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"ምንም"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"ምንም"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"ማንቂያዎች"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{ምንም መተግበሪያዎች ማቋረጥ አይችሉም}=1{{app_1} ማቋረጥ ይችላል}=2{{app_1} እና {app_2} ማቋረጥ ይችላሉ}=3{{app_1}፣ {app_2} እና {app_3} ማቋረጥ ይችላሉ}one{{app_1}፣ {app_2} እና # ተጨማሪ ማቋረጥ ይችላሉ}other{{app_1}፣ {app_2} እና # ተጨማሪ ማቋረጥ ይችላሉ}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (ሥራ)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"በማስላት ላይ…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"የመተግበሪያዎች ቅንብሮች"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"መተግበሪያዎች እንዲሽሩ ይፍቀዱ"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"አቋርጠው መግባት የሚችሉ መተግበሪያዎች"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"ሁነታ ይፍጠሩ"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"ብጁ ሁነታ"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"የሁነታ ስም"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"አንድ አዶ ይምረጡ"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"የቀን መቁጠሪያ ክስተቶች"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"የመኝታ ሰዓት የዕለት ተዕለት ተግባር"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"እየነዱ ሳለ"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"በ<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g> የሚቀናበር"</string>
     <string name="launch_by_default" msgid="892824422067985734">"በነባሪ ክፈት"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"የሚደገፉ አገናኞችን ክፈት"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"በመተግበሪያው ውስጥ"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"በአሳሽዎ ውስጥ"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"ለዚህ የድር መተግበሪያ አገናኙን እንዴት እንደሚከፍቱ ይምረጡ"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"በዚህ መተግበሪያ ውስጥ የሚከፈቱ አገናኞች"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"የሚደገፉ አገናኞች"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"ሌሎች ነባሪ ምርጫዎች"</string>
@@ -5451,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"የQR ኮድ መቃኛ"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"እገዛ ይፈልጋሉ?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"ቅንብሮች ውስጥ ይፈልጉ"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"ዕውቂያዎች፣ ማከማቻ፣ መለያ"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"የዕውቂያዎች ማከማቻ"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"ምንም ነባሪ አልተቀናበረም"</string>
 </resources>
