--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"الاتصال بخدمات البيانات عند التجوال"</string>
     <string name="roaming_disable" msgid="729512894708689604">"الاتصال بخدمات البيانات عند التجوال"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"قد يتم فرض رسوم تجوال."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"التاريخ والوقت التلقائي"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"ضبط التاريخ والوقت تلقائيًا باستخدام إشارة الشبكة والإشارة اللاسلكية"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"المنطقة الزمنية التلقائية"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"ضبط التاريخ والوقت تلقائيًا استنادًا إلى شبكات الجوّال القريبة منك"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"‏يمكن ضبط التاريخ والوقت تلقائيًا باستخدام الموقع الجغرافي لجهازك، إذا كان متاحًا. وقد يُطلَب الاتصال بشبكة Wi-Fi نشِطة."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"استخدام التنسيق التلقائي المحلي"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"استخدام تنسيق ٢٤ ساعة"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"الوقت"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ضبط نقش للمساحة الخاصّة"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"قفل"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"إخفاء"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"يمكنك إضافة ما يصل إلى <xliff:g id="COUNT">%d</xliff:g> بصمات إصبع"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"لقد أضفت الحد الأقصى لعدد بصمات الإصبع"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"يتعذر إضافة مزيد من بصمات الإصبع"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"تحقَّق من كلمة المرور وأعِد المحاولة."</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"يمكنك التواصل مع الشركة المصنّعة للجهاز."</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"يُرجى التحقّق من الاتصال والمحاولة مرة أخرى."</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"اختيار شبكة"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"للاتصال بجهازك، اختَر شبكة."</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"هل تريد إضافة هذا الجهاز إلى \"<xliff:g id="SSID">%1$s</xliff:g>\"؟"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"يمكنك السماح للتطبيقات والخدمات بالبحث عن الأجهزة المجاورة في أي وقت، حتى في حال إيقاف البلوتوث. ويمكن استخدام هذه البيانات مثلاً لتحسين الميزات والخدمات المستندة إلى الموقع الجغرافي."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"خدمات الموقع الجغرافي"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"خدمات الموقع الجغرافي"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"استخدام الموقع الجغرافي لرصد المنطقة الزمنية"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"يتعذّر ضبط المنطقة الزمنية تلقائيًا"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"ميزة \"الموقع الجغرافي\" أو خدمات الموقع الجغرافي غير مفعَّلة."</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"إعدادات الموقع الجغرافي"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"إصلاح ذلك"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"إلغاء"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"لا يمكن استخدام هذه الميزة عند إيقاف إعدادات الرصد التلقائي للمنطقة الزمنية"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"تم إيقاف ميزة رصد المنطقة الزمنية للموقع الجغرافي"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"ميزة رصد المنطقة الزمنية للموقع الجغرافي غير متاحة."</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"غير مسموح بتغييرات رصد المنطقة الزمنية للموقع الجغرافي."</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"إذا كان الموقع الجغرافي لجهازك متاحًا، قد يتم استخدامه لضبط المنطقة الزمنية"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"عرض المعلومات القانونية والحالة وإصدار البرنامج"</string>
     <string name="legal_information" msgid="7509900979811934843">"المعلومات القانونية"</string>
     <string name="manual" msgid="3651593989906084868">"الكتيب"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"حسنًا"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"الإشعارات"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"المدة"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"الرسائل والأحداث والتذكيرات"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"عند تفعيل ميزة \"عدم الإزعاج\"، سيتم تجاهل إشعارات الرسائل والتذكيرات والأحداث، باستثناء الإشعارات التي تسمح بها أعلاه. يمكنك ضبط إعدادات الرسائل للسماح لأصدقائك أو أفراد عائلتك أو جهات الاتصال الأخرى بالتواصل معك."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"تمّ"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"الإعدادات"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"بدون تنبيهات مرئيّة أو صوتية من الإشعارات"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"بدون تنبيهات صوتية من الإشعارات"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"لن ترى أو تسمع إشعارات. ويُسمح بالمكالمات من جهات الاتصال المميّزة بنجمة والمتصلين المتكرّرين."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(الإعداد الحالي)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"هل تريد تغيير إعدادات إشعار ميزة \"عدم الإزعاج\"؟"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"أصوات ملف العمل"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"استخدام أصوات الملف الشخصي"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"استخدام الأصوات نفسها التي يستخدمها ملفك الشخصي"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"بعد فتح القفل، يتم الانتقال مباشرةً إلى آخر شاشة مُستخدَمة. لن تظهر الإشعارات على شاشة القفل. مرِّر سريعًا من أعلى الشاشة لأسفلها لعرض الإشعارات."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"شاشة القفل، شاشة القفل، التخطي، التجاوز"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"عند قفل ملف العمل"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"تقليل عدد الإشعارات المعروضة على شاشة القفل"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"إظهار إشعارات أقل على شاشة القفل"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"إظهار الإشعارات الجديدة فقط على شاشة القفل"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"الإشعارات التي سبق الاطّلاع عليها تتم إزالتها تلقائيًا من شاشة القفل"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"الإشعارات على شاشة القفل"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"المحادثات ذات الأولوية"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"غير مسموح بأي محادثات"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{ما من محادثات}=1{محادثة واحدة}two{محادثتان}few{# محادثات}many{# محادثة}other{# محادثة}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"إعدادات ميزة \"محادثات\""</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"مَن يمكنه تجاوز وضع \"عدم الإزعاج\""</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"حتى لو لم يكن بإمكان تطبيقات المراسلة أو الاتصال إرسال إشعارات إليك، يظلّ بإمكان المستخدمين الذين تختارهم هنا الوصول إليك من خلال هذه التطبيقات"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"المكالمات"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"أي شخص"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"جهات الاتصال"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"جهات الاتصال المميّزة بنجمة"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"إعدادات جهات الاتصال"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"إعدادات جهات الاتصال المميّزة بنجمة"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"غير مسموح بأي مكالمات"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"غير مسموح بأي رسائل"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"المنبّهات"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{عدم السماح لأي تطبيقات بتخطّي وضع \"عدم الإزعاج\"}=1{بإمكان \"{app_1}\" تخطّي وضع \"عدم الإزعاج\"}=2{بإمكان \"{app_1}\" و\"{app_2}\" تخطّي وضع \"عدم الإزعاج\"}=3{بإمكان \"{app_1}\" و\"{app_2}\" و\"{app_3}\" تخطّي وضع \"عدم الإزعاج\"}few{بإمكان \"{app_1}\" و\"{app_2}\" و# تطبيقات إضافية تخطّي وضع \"عدم الإزعاج\"}many{بإمكان \"{app_1}\" و\"{app_2}\" و# تطبيقًا إضافيًا تخطّي وضع \"عدم الإزعاج\"}other{بإمكان \"{app_1}\" و\"{app_2}\" و# تطبيق إضافي تخطّي وضع \"عدم الإزعاج\"}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"‫<xliff:g id="APP_LABEL">%s</xliff:g> (ملف العمل)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"جارٍ الحساب…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"إعدادات التطبيقات"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"‫+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"السماح للتطبيقات بإلغاء وضع \"عدم الإزعاج\""</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"التطبيقات التي يمكنها تخطّي الوضع"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"إنشاء وضع"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"وضع مخصّص"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"اسم الوضع"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"اختَر رمزًا"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"أحداث في التقويم"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"سلسلة إجراءات \"وقت النوم\""</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"أثناء القيادة"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"يديرها <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"الفتح تلقائيًا"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"فتح الروابط المتوافقة"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"في التطبيق"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"في المتصفِّح"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"اختيار كيفية فتح روابط الويب لهذا التطبيق"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"الروابط المراد فتحها في هذا التطبيق"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"الروابط المتوافقة"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"الإعدادات المفضّلة الأخرى"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"خطّتك من <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"ميزة المراسلة باستخدام القمر الصناعي مدرجة ضمن حسابك"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"ميزة المراسلة باستخدام القمر الصناعي غير مدرجة ضمن حسابك"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"مزيد من المعلومات"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"طريقة العمل"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"في حال عدم وجود تغطية شبكة جوّال"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"سيتصل هاتفك تلقائيًا بالقمر الصناعي. للحصول على أفضل تجربة اتصال، يُرجى البقاء في مكان مفتوح بدون عوائق بين الجهاز والسماء."</string>
@@ -5456,10 +5452,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"الماسح الضوئي لرمز الاستجابة السريعة"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"هل أنت بحاجة إلى مساعدة؟"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"البحث في \"الإعدادات\""</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"جهات اتصال، تخزين، حساب"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"تخزين جهات الاتصال"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"لم يتم ضبط حساب تلقائي"</string>
 </resources>
