--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"ৰ’মিঙৰ সময়ত ডেটা সেৱাৰ সৈতে সংযোগ কৰক"</string>
     <string name="roaming_disable" msgid="729512894708689604">"ৰ’মিঙৰ সময়ত ডেটা সেৱাৰ সৈতে সংযোগ কৰক"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"ৰ’মিঙৰ মাচুল প্ৰযোজ্য হ’ব পাৰে।"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"স্বয়ংক্ৰিয় তাৰিখ আৰু সময়"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"আপোনাৰ নেটৱৰ্ক আৰু বেতাঁৰ ছিগনেল ব্যৱহাৰ কৰি স্বয়ংক্ৰিয়ভাৱে ছেট কৰক"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"স্বয়ংক্ৰিয় সময় মণ্ডল"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"আপোনাৰ নিকটৱৰ্তী ম’বাইল নেটৱৰ্ক অনুযায়ী স্বয়ংক্ৰিয়ভাৱে ছেট কৰক"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"উপলব্ধ হ’লে আপোনাৰ ডিভাইচৰ অৱস্থান ব্যৱহাৰ কৰি স্বয়ংক্ৰিয়ভাৱে ছেট কৰক। সক্ৰিয় ৱাইফাই সংযোগৰ প্ৰয়োজন হ’ব পাৰে।"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"স্থানীয় ডিফ’ল্ট ব্যৱহাৰ কৰক"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"২৪ ঘণ্টীয়া সজ্জা ব্যৱহাৰ কৰক"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"সময়"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"প্ৰাইভেট স্পেচৰ বাবে এটা আৰ্হি ছেট কৰক"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"লক কৰক"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"লুকুৱাওক"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপুনি <xliff:g id="COUNT">%d</xliff:g> টালৈকে ফিংগাৰপ্ৰিণ্ট যোগ কৰিব পাৰে"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপুনি সৰ্বাধিক সংখ্যক ফিংগাৰপ্ৰিণ্টবোৰ যোগ কৰিছে"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"আৰু অধিক ফিংগাৰপ্ৰিণ্ট যোগ কৰিব নোৱাৰি"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"পাছৱৰ্ডটো পৰীক্ষা কৰক আৰু পুনৰ চেষ্টা কৰক"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ডিভাইচ নিৰ্মাতাৰ সৈতে যোগাযোগ কৰক"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"সংযোগ পৰীক্ষা কৰি আকৌ চেষ্টা কৰক"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"নেটৱৰ্ক বাছনি কৰক"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"আপোনাৰ ডিভাইচটো সংযোগ কৰিবলৈ এটা নেটৱৰ্ক বাছনি কৰক"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"এই ডিভাইচটো “<xliff:g id="SSID">%1$s</xliff:g>”ত যোগ কৰিবনে?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"ব্লুটুথ অফ থকা অৱস্থাতও এপ্ আৰু সেৱাসমূহক যিকোনো সময়ত নিকটৱৰ্তী ডিভাইচবোৰ স্কেন কৰিবলৈ দিয়ক। এই কাৰ্যটো, যেনে, অৱস্থান সম্পৰ্কীয় সুবিধা আৰু সেৱাসমূহক উন্নত কৰিবলৈ ব্যৱহাৰ কৰিব পাৰি।"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"অৱস্থান সেৱা"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"অৱস্থান সেৱা"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"সময় মণ্ডলৰ বাবে অৱস্থান ব্যৱহাৰ কৰক"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"স্বয়ংক্ৰিয়ভাৱে সময় মণ্ডল ছেট কৰিব নোৱাৰি"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"অৱস্থান অথবা অৱস্থান সেৱাসমূহ অফ কৰা আছে"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"অৱস্থানৰ ছেটিং"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"এইটো সমাধান কৰক"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"বাতিল কৰক"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"স্বয়ংক্ৰিয় সময় মণ্ডল অফ থাকিলে উপলব্ধ নহয়"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"অৱস্থানৰ সময় মণ্ডল চিনাক্তকৰণৰ সুবিধাটো অক্ষম কৰা হৈছে"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"অৱস্থানৰ সময় মণ্ডল চিনাক্তকৰণৰ সুবিধাটো সমৰ্থিত নহয়"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"অৱস্থানৰ সময় মণ্ডল চিনাক্তকৰণৰ সালসলনিৰ অনুমতি দিয়া নহয়"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"যদি আপোনাৰ ডিভাইচৰ অৱস্থান উপলব্ধ হয়, তেন্তে সেইটো আপোনাৰ সময় মণ্ডল ছেট কৰিবলৈ ব্যৱহাৰ কৰা হ’ব পাৰে"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"আইনী তথ্য, স্থিতি, ছফটৱেৰৰ সংস্কৰণ"</string>
     <string name="legal_information" msgid="7509900979811934843">"আইনী তথ্য"</string>
     <string name="manual" msgid="3651593989906084868">"মেনুএল"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"বুজি পালোঁ"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"জাননী"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"সময়"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"বাৰ্তা, কাৰ্যক্ৰম আৰু সোঁৱৰণিসমূহ"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"অসুবিধা নিদিব ম\'ড অন থকা অৱস্থাত আপুনি ওপৰত অনুমতি দিয়া বস্তুবোৰৰ বাহিৰে বাকী বাৰ্তা, ৰিমাইণ্ডাৰ আৰু কাৰ্যক্ৰম মিউট কৰা হ\'ব। আপুনি নিজৰ বন্ধু, পৰিয়ালৰ সদস্য বা অন্য় সম্পৰ্কসমূহক আপোনাৰ সৈতে যোগাযোগ কৰিবৰ বাবে অনুমতি দিবলৈ বাৰ্তাৰ ছেটিং মিলাব পাৰে।"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"হ’ল"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"ছেটিং"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"জাননীৰ পৰা কোনো ভিজুৱেল বা ধ্বনি নাই"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"জাননীৰ কাৰণে কোনো ধ্বনি নাই"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"আপুনি আৰু জাননী নেদেখিব বা জাননীৰ ধ্বনি নুশুনিব। তৰাযুক্ত সম্পৰ্ক আৰু দুনাই কল কৰোঁতাৰ পৰা অহা কলত অনুমতি দিয়া হৈছে।"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(বৰ্তমানৰ ছেটিং)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"অসুবিধা নিদিব-ৰ জাননীৰ ছেটিং সলনি কৰিব নেকি?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"কৰ্মস্থানৰ প্ৰ’ফাইলৰ ধ্বনিসমূহ"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"ব্যক্তিগত প্ৰ’ফাইলৰ ধ্বনি ব্যৱহাৰ কৰক"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"আপোনাৰ ব্যক্তিগত প্ৰ’ফাইলৰ দৰে একেই ধ্বনি ব্যৱহাৰ কৰক"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"আনলক কৰাৰ পাছত পোনপটীয়াকৈ অন্তিমবাৰ ব্যৱহাৰ কৰা স্ক্ৰীনখনলৈ যাওক। জাননীসমূহ লক স্ক্ৰীনত দেখুওৱা নহ’ব। সেইসমূহ চাবলৈ তললৈ ছোৱাইপ কৰক।"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"লক স্ক্ৰীন, লকস্ক্ৰীন, এৰি যাওক, প্ৰতিহত কৰক"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"কৰ্মস্থানৰ প্ৰ\'ফাইল লক থকা অৱস্থাত"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"লক স্ক্ৰীনত দেখুওৱা জাননীৰ সংখ্যা কমোৱা"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"লক স্ক্ৰীনত কম জাননী দেখুৱাওক"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"লক স্ক্ৰীনত কেৱল নতুন জাননী দেখুৱাওক"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"লক স্ক্ৰীনৰ পৰা পূৰ্বে চোৱা জাননীসমূহ স্বয়ংক্ৰিয়ভাৱে আঁতৰাওক"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"লক স্ক্ৰীনত দেখা পোৱা জাননীসমূহ"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"অগ্ৰাধিকাৰপ্ৰাপ্ত বাৰ্তালাপ"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"একো নাই"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{এটাও নাই}=1{১ টা বাৰ্তালাপ}one{# টা বাৰ্তালাপ}other{# টা বাৰ্তালাপ}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"বাৰ্তালাপৰ ছেটিং"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"ব্যাঘাত জন্মাব পৰা সকল"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"বাৰ্তা বিনিময় অথবা কল কৰা এপে যদিও আপোনাক জাননী দিব নোৱাৰে, আপুনি ইয়াত বাছনি কৰা লোকসকলে তথাপি এই এপ্‌সমূহৰ জৰিয়তে আপোনাৰ সৈতে যোগাযোগ কৰিব পাৰে"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"কল"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"যিকোনো লোক"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"সম্পর্কসমূহ"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"তৰাযুক্ত সম্পৰ্কসমূহ"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"সম্পৰ্কৰ ছেটিং"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"তৰা চিহ্নযুক্ত সম্পৰ্কৰ ছেটিং"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"একো নাই"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"একো নাই"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"এলাৰ্মসমূহ"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{কোনো এপে ব্যাঘাত জন্মাব নোৱাৰে}=1{{app_1}এ ব্যাঘাত জন্মাব পাৰে}=2{{app_1} আৰু {app_2}এ ব্যাঘাত জন্মাব পাৰে}=3{{app_1}, {app_2} আৰু {app_3}এ ব্যাঘাত জন্মাব পাৰে}one{{app_1}, {app_2} আৰু # টাই ব্যাঘাত জন্মাব পাৰে}other{{app_1}, {app_2} আৰু # টাই ব্যাঘাত জন্মাব পাৰে}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (কৰ্মস্থান)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"গণনা কৰি থকা হৈছে…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"এপৰ ছেটিং"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"এপক অ\'ভাৰৰাইডৰ অনুমতি দিয়ক"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ব্যাঘাত জন্মাব পৰা এপ্‌সমূহ"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"এটা ম’ড সৃষ্টি কৰক"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"কাষ্টম ক’ড"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ম’ডৰ নাম"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"কোনো চিহ্ন বাছনি কৰক"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"কেলেণ্ডাৰৰ অনুষ্ঠান"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"শোৱাৰ সময়ৰ ৰুটিন"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"গাড়ী চলাই থাকোঁতে"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g> দ্ৱাৰা পৰিচালিত"</string>
     <string name="launch_by_default" msgid="892824422067985734">"ডিফ’ল্ট অনুযায়ী খোলক"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"সমৰ্থিত লিংকসমূহ খুলিব"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"এপ্‌টোত"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"আপোনাৰ ব্ৰাউজাৰত"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"এই এপ্‌টোৰ বাবে কিদৰে ৱেব লিংক খুলিব পাৰি সেয়া বাছনি কৰক"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"এই এপ্‌টোত খুলিবলৈ থকা লিংক"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"সমৰ্থিত লিংকসমূহ"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"অন্য ডিফ’ল্ট অগ্ৰাধিকাৰ"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"আপোনাৰ <xliff:g id="CARRIER_NAME">%1$s</xliff:g>ৰ আঁচনি"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"উপগ্ৰহৰ জৰিয়তে বাৰ্তা বিনিময় কৰাটো আপোনাৰ একাউণ্টত অন্তৰ্ভুক্ত কৰা হয়"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"উপগ্ৰহৰ জৰিয়তে বাৰ্তা বিনিময় কৰাটো আপোনাৰ একাউণ্টত অন্তৰ্ভুক্ত কৰা নহয়"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"অধিক জানক"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"ই কেনেকৈ কাম কৰে"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"যেতিয়া আপোনাৰ কোনো ম’বাইল নেটৱৰ্ক নাথাকে"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"আপোনাৰ ফ’নটো এটা উপগ্ৰহৰ সৈতে স্বয়ংক্ৰিয়ভাৱে সংযুক্ত হ’ব। আটাইতকৈ ভাল সংযোগৰ বাবে, আকাশখন ভালকৈ দেখাকৈ ৰাখক।"</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"কিউআৰ ক’ড স্কেনাৰ"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"সহায় লাগে নেকি?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"সন্ধানৰ ছেটিংসমূহ"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"সম্পর্ক, ষ্ট’ৰেজ, একাউণ্ট"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"সম্পৰ্কৰ ষ্ট’ৰেজ"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"কোনো ডিফ\'ল্ট ছেট কৰা হোৱা নাই"</string>
 </resources>
