--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Connecta\'t a serveis de dades en itinerància"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Connecta\'t a serveis de dades en itinerància"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Es poden aplicar càrrecs per itinerància."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Data i hora automàtiques"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Estableix automàticament amb la xarxa i els senyals sense fil"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Zona horària automàtica"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Estableix automàticament segons les xarxes mòbils properes"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Estableix auto. amb ubicació dispositiu, si disponible. Pot ser que també calgui una connexió Wi‑Fi activa."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Utilitza la configuració regional predeterminada"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Format de 24 hores"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Hora"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Defineix un patró per a l\'espai privat"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Bloqueja"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Amaga"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Pots afegir un màxim de <xliff:g id="COUNT">%d</xliff:g> empremtes digitals"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Has afegit el nombre màxim d\'empremtes digitals"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"No es poden afegir més empremtes digitals"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Comprova la contrasenya i torna-ho a provar"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Contacta amb el fabricant del dispositiu"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Comprova la connexió i torna-ho a provar"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Tria una xarxa"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Per connectar el dispositiu, tria una xarxa"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Vols afegir aquest dispositiu a \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Permet que les aplicacions i els serveis cerquin dispositius propers en qualsevol moment, fins i tot quan el Bluetooth estigui desactivat. Aquesta opció es pot utilitzar, per exemple, per millorar les funcions i els serveis basats en la ubicació."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Serveis d\'ubicació"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Serveis d\'ubicació"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Utilitza la ubicació per a la zona horària"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"No es pot definir la zona horària automàticament"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"La ubicació o els serveis d\'ubicació estan desactivats"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Configuració d\'ubicació"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Corregeix-ho"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Cancel·la"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"No està disponible quan la zona horària automàtica està desactivada"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"La detecció de la zona horària de la ubicació està desactivada"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"No s\'admet la detecció de la zona horària de la ubicació"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"No es permeten canvis en la detecció de la zona horària de la ubicació"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Si la ubicació del dispositiu està disponible, pot ser que s\'utilitzi per definir la teva zona horària"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Mostra informació legal, estat, versió de programari"</string>
     <string name="legal_information" msgid="7509900979811934843">"Informació legal"</string>
     <string name="manual" msgid="3651593989906084868">"Manual"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Entesos"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Notificacions"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Durada"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Missatges, esdeveniments i recordatoris"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Quan actives el mode No molestis, els missatges, els recordatoris i els esdeveniments se silencien, excepte aquells elements que hagis permès més amunt. Pots ajustar la configuració dels missatges per permetre que amics, familiars i altres contactes puguin contactar amb tu."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Fet"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Configuració"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Notificacions sense so ni elements visuals"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Notificacions sense so"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"No veuràs ni sentiràs notificacions. Estan permeses les trucades dels contactes destacats i les trucades repetides."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(configuració actual)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Vols canviar la configuració de notificacions del mode No molestis?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Sons del perfil de treball"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Utilitza sons del perfil personal"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Utilitza els mateixos sons que el teu perfil personal"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"En desbloquejar, aniràs a la darrera pantalla utilitzada. Les notificacions no es mostraran a la pantalla de bloqueig. Llisca des de dalt per veure-les."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"pantalla de bloqueig, bloqueig, ometre, saltar"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Amb el perfil de treball bloquejat"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Minimalisme en les notificacions de la pantalla de bloqueig"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Mostra menys notificacions a la pantalla de bloqueig"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Mostra només notificacions noves a la pantalla de bloqueig"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Suprimeix automàticament de la pantalla de bloqueig les notificacions vistes anteriorment"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Notificacions a la pantalla de bloqueig"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"converses prioritàries"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Cap"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Cap}=1{1 conversa}other{# converses}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Configuració de les converses"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Qui pot interrompre"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Encara que les aplicacions de missatgeria o de trucades no et puguin enviar notificacions, les persones que triïs aquí podran contactar amb tu a través d\'aquestes aplicacions"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Trucades"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Tothom"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Contactes"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Contactes destacats"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Configuració dels contactes"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Configuració dels contactes destacats"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Cap"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Cap"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarmes"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Cap aplicació no pot interrompre}=1{{app_1} pot interrompre}=2{{app_1} i {app_2} poden interrompre}=3{{app_1}, {app_2} i {app_3} poden interrompre}other{{app_1}, {app_2} i # més poden interrompre}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (treball)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"S\'està calculant…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Configuració de les aplicacions"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Permet que les aplicacions ignorin el mode No molestis"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Aplicacions que poden interrompre"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Crea un mode"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Mode personalitzat"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Nom del mode"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Tria una icona"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Esdeveniments del calendari"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Rutina Hora de dormir"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Mentre condueixes"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Gestionat per <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Obre de manera predeterminada"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Obre els enllaços admesos"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"A l\'aplicació"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Al navegador"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Tria com vols obrir els enllaços web per a aquesta aplicació"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Enllaços que s\'obren en aquesta aplicació"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Enllaços admesos"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Altres preferències predeterminades"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"El teu pla de <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Els missatges per satèl·lit s\'inclouen amb el teu compte"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Els missatges per satèl·lit no s\'inclouen amb el teu compte"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Més informació"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Com funciona"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Quan no tinguis connexió de xarxa mòbil"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"El telèfon es connectarà automàticament a un satèl·lit. Per obtenir la millor connexió possible, has de ser en una zona en què es vegi bé el cel."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Escàner de codis QR"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Necessites ajuda?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Configuració de la cerca"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"contactes, emmagatzematge, compte"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Emmagatzematge de contactes"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Cap compte predeterminat definit"</string>
 </resources>
