--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Opret forbindelse til datatjenester ved roaming"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Opret forbindelse til datatjenester ved roaming"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Du skal muligvis betale roaminggebyrer."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Automatisk dato og klokkeslæt"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Indstil automatisk ved hjælp af dit netværk og trådløse signaler"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Automatisk tidszone"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Indstil automatisk baseret på mobilnetværk i nærheden af dig"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Indstil automatisk ved hjælp af din enhedslokation, hvis den er tilgængelig. En aktiv Wi-Fi-forbindelse kan også være påkrævet."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Brug landestandard"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Brug 24-timers format"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Klokkeslæt"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Angiv et mønster til dit private område"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Lås"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Skjul"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Du kan tilføje op til <xliff:g id="COUNT">%d</xliff:g> fingeraftryk"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Du har tilføjet det maksimale antal fingeraftryk"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Du kan ikke tilføje flere fingeraftryk"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Tjek adgangskoden, og prøv igen"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Kontakt producenten af enheden"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Tjek forbindelsen, og prøv igen"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Vælg netværk"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Vælg et netværk for at oprette forbindelse til din enhed"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Vil du føje denne enhed til \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Tillad, at apps og tjenester altid kan søge efter enheder i nærheden, også selvom Bluetooth er deaktiveret. Dette kan f.eks. bruges til at forbedre lokationsbaserede funktioner og tjenester."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Lokationstjenester"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Lokationstjenester"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Brug lokation til tidszone"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Tidszonen kan ikke angives automatisk"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Lokation eller Lokationstjenester er deaktiveret"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Lokationsindstillinger"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Løs dette problem"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Luk"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Ikke tilgængelig, når automatisk tidszone er deaktiveret"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Registrering af tidszone ved hjælp af lokation er deaktiveret"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Registrering af tidszone ved hjælp af lokation understøttes ikke"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Ændringer i forbindelse med registrering af tidszone ved hjælp af lokation er ikke tilladt"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Hvis din enhedslokation er tilgængelig, kan den bruges til at indstille din tidszone"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Se juridisk info, status, softwareversion"</string>
     <string name="legal_information" msgid="7509900979811934843">"Juridiske oplysninger"</string>
     <string name="manual" msgid="3651593989906084868">"Brugervejledning"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"OK"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Notifikationer"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Varighed"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Beskeder, begivenheder og påmindelser"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Når Forstyr ikke er aktiveret, slås lyden fra for beskeder, påmindelser og begivenheder med undtagelse af de elementer, du tillader ovenfor. Du kan ændre beskedindstillingerne, så dine venner, din familie eller andre kontakter kan få fat i dig."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Udfør"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Indstillinger"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Ingen lyd eller visuelle signaler fra notifikationer"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Ingen lyd fra notifikationer"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Notifikationer kan ikke ses eller høres. Opkald fra stjernemarkerede kontakter og gentagne opkald er tilladt."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(aktuel indstilling)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Vil du ændre notifikationsindstillingerne for Forstyr ikke?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Lyde for arbejdsprofil"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Brug lyde fra din personlige profil"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Brug de samme lyde som på din personlige profil"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Gå direkte til den seneste skærm efter oplåsning. Notifikationer vises ikke på låseskærmen. Stryg nedad fra toppen for at se dem."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Låseskærm, lås skærm, spring over, tilsidesæt"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Når arbejdsprofilen er låst"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Minimalt antal af notifikationer på låseskærmen"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Vis færre notifikationer på låseskærmen"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Vis kun nye notifikationer på låseskærmen"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Fjern automatisk tidligere sete notifikationer fra låseskærmen"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Notifikationer på låseskærmen"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"prioriterede samtaler"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Ingen"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ingen}=1{1 samtale}one{# samtale}other{# samtaler}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Samtaleindstillinger"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Hvem kan afbryde?"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Selv hvis besked- og opkaldsapps ikke kan underrette dig, kan de personer, du vælger her, stadig kontakte dig via de pågældende apps"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Opkald"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Alle"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontakter"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Stjernemarkerede kontakter"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Kontaktindstillinger"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Indstillinger for stjernemarkerede kontakter"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ingen"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Ingen"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarmer"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ingen apps må forstyrre}=1{{app_1} må gerne forstyrre}=2{{app_1} og {app_2} må gerne forstyrre}=3{{app_1}, {app_2} og {app_3} må gerne forstyrre}one{{app_1}, {app_2} og # mere må gerne forstyrre}other{{app_1}, {app_2} og # andre må gerne forstyrre}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (arbejde)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Beregner…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Appindstillinger"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Tillad, at apps tilsidesætter"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Apps, der kan afbryde"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Opret en tilstand"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Tilpasset tilstand"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Navn på tilstand"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Vælg et ikon"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Kalenderbegivenheder"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Rutinen Sengetid"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Under kørsel"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Administreret af <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Åbn som standard"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Åbn understøttede links"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"I appen"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"I din browser"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Vælg, hvordan weblinks skal åbnes for denne app"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Links, der skal åbnes i denne app"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Understøttede links"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Andre standardpræferencer"</string>
@@ -4675,7 +4672,7 @@
     <string name="my_device_info_account_preference_summary" msgid="3510582677937510545">"%d konti"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Enhedens navn"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Grundlæggende oplysninger"</string>
-    <string name="my_device_info_legal_category_title" msgid="7732792841537995127">"Juridiske og lovmæssige oplysninger"</string>
+    <string name="my_device_info_legal_category_title" msgid="7732792841537995127">"Juridiske og regulatoriske oplysninger"</string>
     <string name="my_device_info_device_details_category_title" msgid="4848438695638348680">"Enhedsoplysninger"</string>
     <string name="my_device_info_device_identifiers_category_title" msgid="2197063484127704153">"Enheds-id\'er"</string>
     <string name="change_wifi_state_title" msgid="5629648102837821525">"Styring af Wi-Fi"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Dit <xliff:g id="CARRIER_NAME">%1$s</xliff:g>-abonnement"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Din konto omfatter satellitbeskeder"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Din konto omfatter ikke satellitbeskeder"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Få flere oplysninger"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Sådan fungerer det"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Når du ikke har et mobilnetværk"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Din telefon opretter automatisk forbindelse til en satellit. Du opnår den bedst mulige forbindelse, hvis du står udenfor med frit udsyn til himlen."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-kodescanner"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Har du brug for hjælp?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Søg i Indstillinger"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontakter, lagerplads, konto"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Lagerplads for kontakter"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Der er ikke angivet nogen standardkonto"</string>
 </resources>
