--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Konektatu datu-zerbitzuetara ibiltaritzan"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Konektatu datu-zerbitzuetara ibiltaritzan"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Baliteke ibiltaritza-kostuak ordaindu behar izatea."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Data eta ordu automatikoak"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Ezarri automatikoki sarea eta hari gabeko seinaleak erabilita"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Ordu-zona automatikoa"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Ezarri automatikoki inguruko sare mugikorretan oinarrituta"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Ezarri automatikoki gailuaren kokapena erabilita, halakorik badago. Baliteke wifi-konexio aktibo bat ere behar izatea."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Erabili lurraldeko ezarpen lehenetsiak"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Erabili 24 orduko formatua"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Ordua"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Ezarri eredu bat eremu pribaturako"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Blokeatu"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ezkutatu"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"<xliff:g id="COUNT">%d</xliff:g> hartz-marka gehi ditzakezu gehienez"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Iritsi zara onartzen den gehieneko hatz-marka kopurura"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Ezin duzu gehitu beste hatz-markarik"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Egiaztatu pasahitza eta saiatu berriro"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Jarri harremanetan gailuaren fabrikatzailearekin"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Egiaztatu konexioa eta saiatu berriro"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Aukeratu sarea"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Gailua konektatzeko, aukeratu sare bat"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Gailu hau gehitu nahi duzu “<xliff:g id="SSID">%1$s</xliff:g>\" sarean?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Eman inguruko gailuak edozein unetan bilatzeko baimena aplikazioei eta zerbitzuei, baita Bluetootha desaktibatuta dagoenean ere. Kokapenean oinarritutako eginbideak eta zerbitzuak hobetzeko erabil daiteke hori, besteak beste."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Kokapen-zerbitzuak"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Kokapen-zerbitzuak"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Erabili kokapena ordu-zona ezartzeko"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Ezin da automatikoki ezarri ordu-zona"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Kokapena edo Kokapen-zerbitzuak desaktibatuta daude"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Kokapen-ezarpenak"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Konpondu"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Utzi"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Ez dago erabilgarri ordu-zona automatikoa desaktibatuta dagoenean"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Kokapeneko ordu-zona hautemateko aukera desgaituta dago"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Ez da onartzen kokapeneko ordu-zona hautemateko aukera erabiltzea"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Ez da onartzen aldaketarik egitea kokapeneko ordu-zona hautemateko aukeretan"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Gailuaren kokapena erabilgarri badago, baliteke ordu-zona ezartzeko erabiltzea"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Ikusi legezko informazioa, egoera, software-bertsioa"</string>
     <string name="legal_information" msgid="7509900979811934843">"Lege-informazioa"</string>
     <string name="manual" msgid="3651593989906084868">"Eskuliburua"</string>
@@ -2390,7 +2392,7 @@
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Ikusi gailu gehiago"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Audio-doikuntza"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"Audio-azalpena"</string>
-    <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"Entzun pantailan agertzen denaren azalpen bat film eta saio bateragarriak ikusi bitartean"</string>
+    <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"Entzun pantailan agertzen denaren azalpen bat onartzen diren film eta saioak ikusi bitartean"</string>
     <string name="keywords_audio_description" msgid="6202816411593281252">"audio-azalpena, audioa, azalpena, ikusmen txarra"</string>
     <string name="accessibility_summary_shortcut_enabled" msgid="4030427268146752644">"Lasterbidea aktibatuta"</string>
     <string name="accessibility_summary_shortcut_disabled" msgid="564005462092499068">"Desaktibatuta"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Ados"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Jakinarazpenak"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Iraupena"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Mezuak, gertaerak eta abisuak"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Ez molestatzeko modua aktibatuta dagoenean, mezu, abisu eta gertaeren audioa eta dardara desaktibatuta egongo dira, goian baimendutako elementuetan izan ezik. Ezarpenak alda ditzakezu lagunak, familia edo beste kontaktuak zurekin harremanetan jarri ahal daitezen."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Eginda"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Ezarpenak"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Ez egin soinurik eta ez erakutsi ezer jakinarazpenak jasotzean"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Ez egin soinurik jakinarazpenak jasotzean"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Ez duzu ikusi edo entzungo jakinarazpenik. Kontaktu izardunek eta berriro deitu dutenen deiak onartu egingo dira."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Oraingo ezarpena)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Ez molestatzeko moduaren jakinarazpen-ezarpenak aldatu nahi dituzu?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Laneko profileko soinuak"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Erabili profil pertsonaleko soinuak"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Erabili profil pertsonaleko soinu berberak"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Desblokeatu ondoren, joan zuzenean erabilitako azken pantailara. Jakinarazpenak ez dira agertuko pantaila blokeatuan. Haiek ikusteko, pasatu hatza pantailaren goialdetik behera."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"pantaila blokeatua, blokeo pantaila, saltatu, zeharbidea"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Laneko profila blokeatu bada"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Pantaila blokeatuko jakinarazpenen minimalismoa"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Erakutsi jakinarazpen gutxiago pantaila blokeatuan"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Erakutsi jakinarazpen berriak soilik pantaila blokeatuan"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Kendu automatikoki lehendik ikusitako jakinarazpenak pantaila blokeatutik"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Pantaila blokeatuko jakinarazpenak"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"lehentasunezko elkarrizketak"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Bat ere ez"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Bat ere ez}=1{1 elkarrizketa}other{# elkarrizketa}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Elkarrizketen ezarpenak"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Eten dezaketenak"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Mezularitza- eta dei-aplikazioek jakinarazpenik bidali ezin izan arren, hemen aukeratzen dituzun pertsonak zurekin harremanetan jar daitezke aipatutako aplikazioen bidez"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Deiak"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Guztienak"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontaktuenak"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Kontaktu izardunenak"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Kontaktuen ezarpenak"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Kontaktu izardunen ezarpenak"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Inorenak ez"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Bat ere ez"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarmak"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ez dago eten dezakeen aplikaziorik}=1{{app_1} aplikazioak eten dezake}=2{{app_1} eta {app_2} aplikazioek eten dezakete}=3{{app_1}, {app_2} eta {app_3} aplikazioek eten dezakete}other{{app_1}, {app_2} eta beste # aplikaziok eten dezakete}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (lana)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Kalkulatzen…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Aplikazioen ezarpenak"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Eman \"Ez molestatu\" ez aplikatzeko baimena aplikazioei"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Eten zaitzaketen aplikazioak"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Sortu modu bat"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Modu pertsonalizatua"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Moduaren izena"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Aukeratu ikono bat"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Egutegiko gertaerak"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Lo egiteko garaiko ohitura"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Gidatu bitartean"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Kudeatzailea: <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Ireki modu lehenetsian"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Ireki onartzen diren estekak"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Aplikazioan"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Arakatzailean"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Aukeratu nola ireki sareko estekak aplikazio honetan"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Aplikazio honetan ireki beharreko estekak"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Onartzen diren estekak"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Beste hobespen lehenetsi batzuk"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g> operadorearekin kontratatuta daukazun tarifa"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Satelite bidezko mezularitza kontuarekin dator"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Satelite bidezko mezularitza ez dator kontuarekin"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Lortu informazio gehiago"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Nola funtzionatzen du?"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Sare mugikorrik ez duzunean"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Telefonoa automatikoki konektatuko da satelite batera. Ahalik eta konexio onena izateko, ziurtatu zerua argi ikus dezakezula."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR kodeen eskanerra"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Laguntza behar duzu?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Bilatu ezarpenetan"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontaktuak, biltegia, kontua"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Kontaktuen biltegia"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Ez da ezarri kontu lehenetsirik"</string>
 </resources>
