--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Yhdistä verkkoon roaming-tilassa"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Yhdistä verkkoon roaming-tilassa"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Datan käytöstä saatetaan periä roaming-maksuja."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Automaattinen päivämäärä ja aika"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Määritä automaattisesti verkon ja langattomien signaalien perusteella"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Automaattinen aikavyöhyke"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Määritä automaattisesti lähellä olevien mobiiliverkkojen perusteella"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Määritä automaattisesti sijainnin perusteella, jos saatavilla. Voi vaatia aktiivista Wi-Fi-yhteyttä."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Käytä paikallista oletusasetusta"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Käytä 24-tuntista kelloa"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Aika"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Määritä kuvio yksityiselle tilallesi"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Lukitus"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Piilotus"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Voit lisätä korkeintaan <xliff:g id="COUNT">%d</xliff:g> sormenjälkeä"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Et voi lisätä useampia sormenjälkiä."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Enempää sormenjälkiä ei voi lisätä."</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Tarkista salasana ja yritä uudelleen"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Ota yhteyttä laitteen valmistajaan"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Tarkista yhteys ja yritä uudelleen"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Valitse verkko"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Yhdistä laitteesi valitsemalla verkko"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Lisätäänkö laite \"<xliff:g id="SSID">%1$s</xliff:g>\"-verkkoon?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Salli sovellusten ja palvelujen hakea lähellä olevia laitteita aina, vaikka Bluetooth olisi pois käytöstä. Näin voidaan esimerkiksi kehittää sijaintiin perustuvia ominaisuuksia ja palveluja."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Sijaintipalvelut"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Sijaintipalvelut"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Käytä sijaintia aikavyöhykkeen määrittämiseen"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Aikavyöhykettä ei voi asettaa automaattisesti"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Sijainti tai Sijaintipalvelut ovat pois päältä"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Sijaintiasetukset"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Ratkaise ongelma"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Peru"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Ei käytettävissä, kun automaattinen aikavyöhyke on pois päältä"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Sijainnin aikavyöhykkeen tunnistus on poistettu käytöstä"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Sijainnin aikavyöhykkeen tunnistusta ei tueta"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Sijainnin aikavyöhykkeen tunnistukseen ei voi tehdä muutoksia"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Jos laitteen sijainti on saatavilla, sitä voidaan käyttää aikavyöhykkeen määrittämiseen"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Näytä lakitiedot, tila, ohjelmiston versio"</string>
     <string name="legal_information" msgid="7509900979811934843">"Oikeudelliset tiedot"</string>
     <string name="manual" msgid="3651593989906084868">"Käyttöopas"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Selvä"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Ilmoitukset"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Kesto"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Viestit, tapahtumat ja muistutukset"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Älä häiritse ‑tilassa viestit, muistutukset ja tapahtumat mykistetään yllä määritettyjä poikkeuksia lukuun ottamatta. Voit määrittää viestiasetukset niin, että ystävät, perheenjäsenet tai muut yhteyshenkilöt saavat sinuun yhteyden."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Valmis"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Asetukset"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Ei ilmoitusgrafiikoita tai ‑ääntä"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Ei ilmoitusääniä"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Et näe tai kuule ilmoituksia. Tähdellä merkityiltä yhteyshenkilöiltä ja usein soittavilta tulevat puhelut sallitaan."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(nykyinen asetus)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Muutetaanko Älä häiritse ‑ilmoitusasetuksia?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Työprofiilin äänet"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Käytä oman profiilin ääniä"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Käytä samoja ääniä kuin henkilökohtaisessa profiilissa"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Siirry lukituksen avauksen jälkeen suoraan viimeisimmälle näytölle. Ilmoitukset eivät näy lukitusnäytöllä. Näet ne pyyhkäisemällä yläkulmasta alas."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Lukitusnäyttö, ohita"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Kun työprofiili on lukittu"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Lukitusnäytön ilmoitusten minimointi"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Näytä vähemmän ilmoituksia lukitusnäytöllä"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Näytä lukitusnäytöllä vain uudet ilmoitukset"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Poista automaattisesti kaikki aiemmin nähdyt ilmoitukset lukitusnäytöltä"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Ilmoitukset lukitusnäytöllä"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"tärkeät keskustelut"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"–"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ei yhtään}=1{1 keskustelu}other{# keskustelua}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Keskusteluasetukset"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Kuka saa keskeyttää"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Vaikka viesti- ja puhelusovellukset eivät voi lähettää sinulle ilmoituksia, täällä valitsemasi henkilöt saavat kuitenkin sinuun yhteyden kyseisten sovellusten kautta"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Puhelut"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Kaikki"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontaktit"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Tähdellä merkityt kontaktit"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Yhteystietojen asetukset"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Tähdellä merkittyjen yhteystietojen asetukset"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"–"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"–"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Hälytykset"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Mitkään sovellukset eivät voi keskeyttää}=1{{app_1} voi keskeyttää}=2{{app_1} ja {app_2} voivat keskeyttää}=3{{app_1}, {app_2} ja {app_3} voivat keskeyttää}other{{app_1}, {app_2} ja # muuta voivat keskeyttää}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (työ)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Lasketaan…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Sovellusasetukset"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Salli ohittaminen sovelluksille"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Sovellukset, jotka saavat keskeyttää"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Luo tila"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Oma tila"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Tilan nimi"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Valitse kuvake"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Kalenteritapahtumat"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Nukkumaanmeno-ohjelma"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Ajon aikana"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Hallinnoija: <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Avaa oletuksena"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Avaa tuetut linkit"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Sovelluksessa"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Selaimella"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Valitse, miten verkkolinkit avataan tässä sovelluksessa"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Sovelluksella avattavat linkit"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Tuetut linkit"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Muut oletusasetukset"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g> ‑pakettisi"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Satelliittiviestintä on osa tiliäsi"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Satelliittiviestintä ei sisälly tiliisi"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Lue lisää"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Näin se toimii"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Kun mobiiliverkko ei ole saatavilla"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Puhelimesi yhdistää satelliittiin automaattisesti. Yhteyden laatu on paras, kun pysyt ulkona avoimella paikalla."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-koodiskanneri"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Tarvitsetko apua?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Hae asetuksista"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"yhteystiedot, tallennustila, tili"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Yhteystietojen säilytys"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Oletusta ei ole asetettu."</string>
 </resources>
