--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Միանալ տվյալների փոխանցման ծառայություններին ռոումինգում"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Միանալ տվյալների փոխանցման ծառայություններին ռոումինգում"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Ռոումինգի համար կարող է գումար գանձվել:"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Ամսաթվի և ժամի ավտոմատ որոշում"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Ավտոմատ կարգավորել՝ օգտագործելով ցանցը և անլար ազդանշանները"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Ժամային գոտու ավտոմատ որոշում"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Ավտոմատ սահմանել՝ հիմնվելով ձեր մոտակայքում գործող բջջային ցանցերի վրա"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Ավտոմատ կարգավորել՝ օգտագործելով սարքի տեղադրությունը, եթե առկա է։ Կարող է նաև պահանջվել Wi-Fi կապ։"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Օգտագործել կանխադրված տեղույթը"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Օգտագործել 24-ժամյա ձևաչափը"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Ժամը"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Նախշ մասնավոր տարածքի համար"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Կողպում"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Թաքցնել"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Կարող եք ավելացնել առավելագույնը <xliff:g id="COUNT">%d</xliff:g> մատնահետք"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Դուք ավելացրել եք մատնահետքերի առավելագույն թույլատրելի քանակը"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Հնարավոր չէ ավելացնել այլ մատնահետքեր"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Ստուգեք գաղտնաբառն ու նորից փորձեք"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Կապվեք սարքը արտադրողի հետ"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Ստուգեք ինտերնետ կապը և նորից փորձեք"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Ընտրեք ցանց"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Սարքը միացնելու համար ընտրեք ցանցը"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Ավելացնե՞լ այս սարքը «<xliff:g id="SSID">%1$s</xliff:g>» ցանցում"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Թույլ տալ հավելվածներին և ծառայություններին որոնել մոտակայքում գտնվող սարքեր, նույնիսկ երբ Bluetooth-ն անջատված է: Դա կարող է բարելավել տեղորոշում օգտագործող գործառույթների և ծառայությունների աշխատանքը:"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Տեղորոշման ծառայություններ"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Տեղորոշման ծառայություններ"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Օգտագործել տեղադրությունը ժամային գոտու համար"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Ժամային գոտին չի կարող ավտոմատ կարգավորվել"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Տեղորոշումը կամ տեղորոշման ծառայություններն անջատված են"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Տեղադրության կարգավորումներ"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Շտկել"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Չեղարկել"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Հասանելի չէ, երբ ժամային գոտու ավտոմատ որոշումն անջատված է"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Տեղադրության միջոցով ժամային գոտու որոշումն անջատված է"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Տեղադրության միջոցով ժամային գոտու որոշումը չի աջակցվում"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Դուք չեք կարող փոփոխել տեղադրության միջոցով ժամային գոտու որոշման կարգավորումները"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Եթե ձեր սարքի տեղադրությունը հասանելի է, այն կարող է օգտագործվել ձեր ժամային գոտին սահմանելու համար"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Դիտել իրավական տեղեկությունները, կարգավիճակը, ծրագրի տարբերակը"</string>
     <string name="legal_information" msgid="7509900979811934843">"Իրավական տեղեկություններ"</string>
     <string name="manual" msgid="3651593989906084868">"Ձեռքով"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Եղավ"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Ծանուցումներ"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Տևողություն"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Հաղորդագրություններ, իրադարձություններ և հիշեցումներ"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"«Չանհանգստացնել» ռեժիմում հաղորդագրությունների, հիշեցումների և միջոցառումների համար ձայնն անջատվում է: Բացառություն են կազմում վերևում ձեր թույլատրած կետերը: Դուք կարող եք փոփոխել հաղորդագրությունների կարգավորումները, որպեսզի ձեր ընկերները, ընտանիքի անդամները և այլ կոնտակտներ կարողանան կապվել ձեզ հետ:"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Պատրաստ է"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Կարգավորումներ"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Ամբողջությամբ անջատել ծանուցումները"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Անջատել ծանուցումների ձայնը"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Ծանուցումներն ամբողջությամբ կանջատվեն։ Դուք կստանաք միայն աստղանշված կոնտակտներից և կրկնվող զանգեր։"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(ընթացիկ կարգավորումը)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Փոփոխե՞լ «Չանհանգստացնել» ռեժիմի ծանուցումների կարգավորումները"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Աշխատանքային պրոֆիլի ձայներ"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Օգտագործել անձնական պրոֆիլի ձայները"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Օգտագործել նույն ձայները, ինչ անձնական պրոֆիլում"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Ապակողպելուց հետո անցնել վերջին օգտագործած էկրանին։ Ծանուցումները չեն ցուցադրվի կողպէկրանին։ Դրանք տեսնելու համար էկրանի վերևից մատը սահեցրեք ներքև։"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Էկրանի կողպում, կողպէկրան, բաց թողնել, շրջանցել"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Երբ պրոֆիլը կողպված է"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Ավելի քիչ ծանուցումներ կողպէկրանին"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Ցույց տալ ավելի քիչ ծանուցումներ կողպէկրանին"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Կողպէկրանին ցույց տալ միայն նոր ծանուցումները"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Ավտոմատ հեռացնել նախկինում դիտված ծանուցումները կողպէկրանից"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Ծանուցումներ կողպէկրանին"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"կարևոր զրույցներ"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Ոչ մեկը"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ոչ մի զրույց}=1{1 զրույց}one{# զրույց}other{# զրույց}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Զրույցների կարգավորումներ"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Ով կարող է ընդհատել"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Նույնիսկ եթե հաղորդագրման և զանգերի հավելվածները չկարողանան ձեզ ծանուցել, ձեր ընտրած մարդիկ կկարողանան կապվել ձեզ հետ այդ հավելվածների միջոցով։"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Զանգեր"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Բոլորը"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Կոնտակտներ"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Աստղանշված կոնտակտներ"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Կոնտակտների կարգավորումներ"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Աստղանշված կոնտակտների կարգավորումներ"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ոչ մեկը"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Ոչ մեկը"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Զարթուցիչ"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ոչ մի հավելված չի կարող ընդհատել}=1{{app_1} հավելվածը կարող է ընդհատել}=2{{app_1} և {app_2} հավելվածները կարող են ընդհատել}=3{{app_1}, {app_2} և {app_3} հավելվածները կարող են ընդհատել}one{{app_1} և {app_2} հավելվածներն ու ևս # հավելված կարող են ընդհատել}other{{app_1} և {app_2} հավելվածներն ու ևս # հավելված կարող են ընդհատել}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (աշխատանքային)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Հաշվարկում…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Հավելվածների կարգավորումներ"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Թույլատրել հավելվածներին փոխել «Չանհանգստացնել» ռեժիմի կարգավորումները"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Հավելվածներ, որոնք կարող են ընդհատել"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Ստեղծեք ռեժիմ"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Հատուկ ռեժիմ"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Ռեժիմի անվանումը"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Ընտրեք պատկերակ"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Օրացույցի միջոցառումներ"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"«Քնի ժամ» ծրագիր"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Մեքենա վարելիս"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Կառավարիչ՝ <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Բացել ըստ կանխադրման"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Բացել աջակցվող հղումները"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Հավելվածում"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Ձեր դիտարկիչում"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Ընտրեք՝ ինչպես բացել այս հավելվածի վեբ հղումները"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Հղումներ, որոնք պետք է բացվեն այս հավելվածում"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Աջակցվող հղումներ"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Այլ կանխադրված կարգավորումներ"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Ձեր <xliff:g id="CARRIER_NAME">%1$s</xliff:g> պլանը"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Արբանյակային կապով հաղորդագրումը ներառված է ձեր հաշվում"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Արբանյակային կապով հաղորդագրումը ներառված չէ ձեր հաշվում"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Իմանալ ավելին"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Ինչպես է դա աշխատում"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Երբ բջջային ցանցին միացած չլինեք"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Ձեր հեռախոսն ավտոմատ կմիանա արբանյակային կապին։ Կապի օպտիմալ որակի համար պետք է դրսում լինեք, և երկինքը պետք է պարզ երևա։"</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR կոդերի սկաներ"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Օգնության կարի՞ք ունեք"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Որոնեք կարգավորումներում"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"կոնտակտներ, տարածք, հաշիվ"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Կոնտակտների տարածք"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Որևէ հաշիվ սահմանված չէ որպես կանխադրված"</string>
 </resources>
