--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Terhubung ke layanan data ketika roaming"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Terhubung ke layanan data ketika roaming"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Biaya roaming dapat berlaku."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Tanggal dan waktu otomatis"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Setel secara otomatis menggunakan jaringan dan sinyal nirkabel Anda"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Zona waktu otomatis"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Setel otomatis berdasarkan jaringan seluler di sekitar Anda"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Setel secara otomatis menggunakan lokasi perangkat, jika tersedia. Koneksi Wi-Fi yang aktif juga mungkin diperlukan."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Gunakan default lokalitas"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Gunakan format 24 jam"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Waktu"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Setel pola untuk ruang pribadi Anda"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Kunci"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Sembunyikan"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Anda dapat menambahkan maksimal <xliff:g id="COUNT">%d</xliff:g> sidik jari"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Anda telah menambahkan jumlah maksimum sidik jari"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Tidak dapat menambahkan sidik jari lagi"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Periksa sandi dan coba lagi"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Hubungi produsen perangkat"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Periksa koneksi dan coba lagi"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Pilih jaringan"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Untuk menyambungkan perangkat Anda, pilih jaringan"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Tambahkan perangkat ini ke “<xliff:g id="SSID">%1$s</xliff:g>”?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Izinkan aplikasi dan layanan untuk memindai perangkat di sekitar kapan saja, bahkan saat Bluetooth nonaktif. Ini dapat dilakukan, misalnya, untuk meningkatkan kualitas fitur dan layanan berbasis lokasi."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Layanan lokasi"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Layanan lokasi"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Gunakan lokasi untuk zona waktu"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Tidak dapat otomatis menyetel zona waktu"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Lokasi atau Layanan Lokasi nonaktif"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Setelan lokasi"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Perbaiki ini"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Batal"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Tidak tersedia saat zona waktu otomatis nonaktif"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Deteksi zona waktu lokasi dinonaktifkan"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Deteksi zona waktu lokasi tidak didukung"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Perubahan deteksi zona waktu lokasi tidak diizinkan"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Jika lokasi perangkat tersedia, lokasi dapat digunakan untuk menyetel zona waktu"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Lihat info legal, status, versi software"</string>
     <string name="legal_information" msgid="7509900979811934843">"Informasi hukum"</string>
     <string name="manual" msgid="3651593989906084868">"Manual"</string>
@@ -2321,7 +2323,7 @@
     <string name="accessibility_vibration_setting_disabled_for_silent_mode_summary" msgid="3982701772953323190">"Setelan dinonaktifkan karena perangkat disetel ke senyap"</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Panggilan telepon"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Notifikasi dan alarm"</string>
-    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Interaksi sentuhan"</string>
+    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Haptik interaksi"</string>
     <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Gunakan getaran &amp; sentuhan"</string>
     <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Getaran alarm"</string>
     <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Getaran media"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Oke"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Notifikasi"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Durasi"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Pesan, acara &amp; pengingat"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Jika mode Jangan Ganggu diaktifkan, pesan, pengingat, dan acara akan dimatikan suara dan getarannya, kecuali item yang Anda izinkan di atas. Anda dapat menyesuaikan setelan pesan untuk mengizinkan teman, keluarga, atau kontak lain menghubungi Anda."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Selesai"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Setelan"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Tidak ada visual atau suara dari notifikasi"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Tidak ada suara dari notifikasi"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Anda tidak akan melihat atau mendengar notifikasi. Panggilan dari kontak berbintang dan penelepon berulang diizinkan."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Setelan saat ini)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Ubah setelan notifikasi mode Jangan Ganggu?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Suara profil kerja"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Gunakan suara profil pribadi"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Gunakan suara yang sama dengan profil pribadi"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Setelah membuka kunci, langsung buka layar yang terakhir digunakan. Notifikasi tidak akan muncul di layar kunci. Geser layar dari atas ke bawah untuk melihat notifikasi."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Layar kunci, Layar kunci, Lewati, Abaikan"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Saat profil kerja dikunci"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Notifikasi layar kunci minimalis"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Tampilkan lebih sedikit notifikasi di layar kunci"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Tampilkan hanya notifikasi baru di layar kunci"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Otomatis hapus notifikasi yang telah dilihat sebelumnya dari layar kunci"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Notifikasi di layar kunci"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"percakapan prioritas"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Tidak ada"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Tidak ada}=1{1 percakapan}other{# percakapan}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Setelan percakapan"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Siapa yang boleh mengganggu"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Meskipun aplikasi pesan atau telepon tidak dapat memberikan notifikasi, orang yang dipilih di sini tetap dapat menghubungi Anda melalui aplikasi tersebut"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Panggilan telepon"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Siapa saja"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontak"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Kontak berbintang"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Setelan kontak"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Setelan kontak berbintang"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Tidak ada"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Tidak ada"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarm"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Tidak ada aplikasi yang boleh mengganggu}=1{{app_1} boleh mengganggu}=2{{app_1} dan {app_2} boleh mengganggu}=3{{app_1}, {app_2}, dan {app_3} boleh mengganggu}other{{app_1}, {app_2}, dan # lainnya boleh mengganggu}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (Kerja)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Menghitung…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Setelan aplikasi"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Izinkan aplikasi mengganti"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Aplikasi yang boleh mengganggu"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Buat mode"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Mode kustom"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Nama mode"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Pilih ikon"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Acara kalender"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Rutinitas waktu tidur"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Saat mengemudi"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Dikelola oleh <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Buka secara default"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Buka link yang didukung"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Di aplikasi"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Di browser Anda"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Pilih cara membuka link web untuk aplikasi ini"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Link yang dapat dibuka di aplikasi ini"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Link yang didukung"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Preferensi default lainnya"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Paket <xliff:g id="CARRIER_NAME">%1$s</xliff:g> Anda"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Fitur pesan satelit disertakan pada akun Anda"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Fitur pesan satelit tidak disertakan pada akun Anda"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Pelajari Lebih Lanjut"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Cara kerjanya"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Saat Anda tidak memiliki jaringan seluler"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Ponsel Anda akan terhubung otomatis ke satelit. Untuk koneksi terbaik, pastikan langit terlihat tanpa terhalang."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Pemindai kode QR"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Perlu bantuan?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Telusuri Setelan"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontak, penyimpanan, akun"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Penyimpanan kontak"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Tidak ada default yang disetel"</string>
 </resources>
