--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Поврзи се со интернет услуги во роаминг"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Поврзи се со интернет услуги во роаминг"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Може да ви се наплати за роаминг."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Автоматски датум и време"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Поставете автоматски со вашата мрежа и безжични сигнали"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Автоматска временска зона"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Поставете автоматски според мобилните мрежи во ваша близина"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Поставете автоматски со локацијата на уредот, ако е достапна. Може да треба и активна Wi-Fi врска."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Користи локален стандард"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Користи 24-часовен формат"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Време"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Поставете шема за „Приватен простор“"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Заклучи"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Скриј"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Може да додадете до <xliff:g id="COUNT">%d</xliff:g> отпечатоци"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Додадовте максимален број на отпечатоци"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Не може да се додадат повеќе отпечатоци"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Проверете ја лозинката и обидете се повторно"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Контактирајте со производителот на уредот"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Проверете ја врската и обидете се повторно"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Изберете мрежа"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"За да го поврзете уредот, изберете мрежа"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Да се додаде уредов на „<xliff:g id="SSID">%1$s</xliff:g>“?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Дозволете апликациите и услугите да скенираат за уреди во близина во секое време, дури и кога Bluetooth е исклучен. Ова може да се користи, на пример, за да се подобрат функциите и локациските услуги."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Локациски услуги"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Локациски услуги"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Користете локација за временската зона"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Часовната зона не може да се постави автоматски"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"„Локацијата“ или „Локациските услуги“ се исклучени"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Поставки за локација"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Поправи"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Откажи"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Не е достапно кога е исклучена автоматската временска зона"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Откривање временска зона на локација е оневозможено"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Откривањето временска зона на локација не е поддржано"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Промените на откривањето временска зона на локација не се дозволени"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Ако е достапна локацијата на вашиот уред, може да се користи за поставување на временската зона"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Прикажи правни информации, статус, верзија на софтвер"</string>
     <string name="legal_information" msgid="7509900979811934843">"Правни информации"</string>
     <string name="manual" msgid="3651593989906084868">"Упатство"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Сфатив"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Известувања"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Времетраење"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Пораки, настани и потсетници"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Кога е вклучен режимот „Не вознемирувај“, звукот на пораките, потсетниците и настаните е исклучен, освен за ставките што сте ги дозволите погоре. Може да ги приспособите поставките за пораки за да им дозволите на пријателите, семејството или другите контакти да ве добијат."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Готово"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Поставки"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Без визуелни вознемирувања или звук од известувањата"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Без звук од известувањата"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Нема да гледате ниту да слушате известувања. Повиците од контактите означени со ѕвезда и повторните повикувачи се дозволени."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Тековна поставка)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Да се променат поставките за известувања на режимот „Не вознемирувај“?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Звуци на работниот профил"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Користи звуци од личен профил"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Користи ги истите звуци како на личниот профил"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"По отклучување, оди директно на последниот користен екран. Известувањата нема да се прикажуваат на заклучен екран. Повлечете надолу од врвот за да ги видите."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Заклучен екран, прескокни, заобиколи"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"При заклучен работен профил"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Минимализам за известувања на заклучен екран"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Прикажувај помалку известувања на заклучен екран"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Прикажувај само нови известувања на заклучен екран"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Автоматски отстранувај ги претходно прегледаните известувања од заклучениот екран"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Известувања на заклучен екран"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"приоритетни разговори"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Ниеден"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ниеден}=1{1 разговор}one{# разговор}other{# разговори}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Поставки за разговори"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Кој може да го прекинува режимот"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Дури и ако апликациите за повици или размена на пораки не можат да ве известуваат, луѓето што овде ќе ги изберете сепак ќе можат да ве добијат преку тие апликации"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Повици"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Сите"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Контакти"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Контакти означени со ѕвезда"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Поставки за контакти"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Поставки за контакти означени со ѕвезда"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ниеден"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Ниедна"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Аларми"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ниедна апликација не може да го прекинува}=1{{app_1} може да го прекинува}=2{{app_1} и {app_2} може да го прекинуваат}=3{{app_1}, {app_2} и{app_3} може да го прекинуваат}one{{app_1}, {app_2} и уште # може да го прекинуваат}other{{app_1}, {app_2} и уште # може да го прекинуваат}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (работа)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Се пресметува…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Поставки за апликации"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+ <xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дозволете апликациите да занемаруваат"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат режимот"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Создајте режим"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Приспособен режим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Име на режимот"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Изберете икона"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Настани во календарот"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Рутина за времето за спиење"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"При возење"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Управувано од <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Отворај стандардно"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Отворај поддржани линкови"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Во апликацијата"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Во прелистувачот"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Изберете како да се отвораат линковите за апликацијава"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Линкови за отворање во апликацијава"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Поддржани линкови"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Други стандардни поставки"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Вашиот пакет од <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Размената на пораки преку сателит е опфатена со вашата сметка"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Размената на пораки преку сателит не е опфатена со вашата сметка"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Дознајте повеќе"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Дознајте како функционира"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Кога немате мобилна мрежа"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Вашиот телефон ќе се поврзе на сателит автоматски. За најдобра врска, погрижете се да имате јасен поглед кон небото."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Скенер на QR-кодови"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Ви треба помош?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Пребарувајте низ поставките"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"контакти, складирање, сметка"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Складирање контакти"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Нема поставено стандардна сметка"</string>
 </resources>
