--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Роумингтэй үед дата үйлчилгээнд холбогдох"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Роумингтэй үед дата үйлчилгээнд холбогдох"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Роуминг үйлчилгээний төлбөр тооцогдож болзошгүй."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Автомат огноо болон цаг"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Таны сүлжээ болон утасгүй дохиог ашиглан автоматаар тохируулна"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Автомат цагийн бүс"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Таны ойролцоох хөдөлгөөнт холбооны сүлжээнд үндэслэн автоматаар тохируулна"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Таны төхөөрөмжийн байршлыг ашиглан автоматаар тохируулна. Идэвхтэй Wi-Fi холболт мөн шаардаж болно"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Бүс нутгийн өгөгдмөлийг ашиглах"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24 цагийн формат ашиглах"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Цаг"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Хувийн орон зайдаа хээ тохируулна уу"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Түгжээ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Нуух"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Та <xliff:g id="COUNT">%d</xliff:g> хүртэлх хурууны хээ нэмж болно"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Таны зөвшөөрөгдсөн хурууны хээний тоо гүйцсэн байна"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Өөр хурууны хээ нэмэх боломжгүй байна"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Нууц үгийг шалгаад дахин оролдоно уу"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Төхөөрөмжийн үйлдвэрлэгчтэй холбогдоно уу"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Холболтыг шалгаад дахин оролдоно уу"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Сүлжээ сонгох"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Төхөөрөмжөө холбохын тулд сүлжээ сонгоно уу"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Энэ төхөөрөмжийг “<xliff:g id="SSID">%1$s</xliff:g>”-д нэмэх үү?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Апп, үйлчилгээнд Bluetooth унтраалттай үед ч ойролцоох төхөөрөмжийг хүссэн үедээ скан хийхийг зөвшөөрнө үү. Үүнийг байршилд суурилсан онцлог, үйлчилгээнүүдийг сайжруулахад ашиглаж магадгүй."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Байршлын үйлчилгээ"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Байршлын үйлчилгээ"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Байршлыг цагийн бүс тохируулахад ашиглах"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Цагийн бүсийг автоматаар тохируулах боломжгүй"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Байршил эсвэл Байршлын үйлчилгээ унтраалттай байна"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Байршлын тохиргоо"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Үүнийг засах"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Цуцлах"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Автомат цагийн бүс унтраалттай байхад боломжгүй"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Байршлын цагийн бүс илрүүлэх горимыг идэвхгүй болгосон"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Байршлын цаг бүс илрүүлэх горимыг дэмждэггүй"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Байршлын цагийн бүс илрүүлэх горимыг өөрчлөхийг зөвшөөрөхгүй"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Хэрэв таны төхөөрөмжийн байршил боломжтой бол уг байршлыг таны цагийн бүсийг тохируулахад ашиглаж магадгүй"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Хууль эрх зүйн мэдээлэл, статус, программын хувилбарыг харах"</string>
     <string name="legal_information" msgid="7509900979811934843">"Хууль эрх зүйн мэдээлэл"</string>
     <string name="manual" msgid="3651593989906084868">"Гар ажиллагаатай"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Ойлголоо"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Мэдэгдэл"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Үргэлжлэх хугацаа"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Мессеж, арга хэмжээ &amp; сануулагч"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Бүү саад бол горим асаалттай үед мессеж, сануулагч, үйл ажиллагааны дууг таны зөвшөөрснөөс бусад зүйлд хаах болно. Та найз нөхөд, гэр бүлийнхэн эсвэл бусад харилцагчдаа тантай холбоо барихыг зөвшөөрөхийн тулд мессежын тохиргоог өөрчлөх боломжтой."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Дууссан"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Тохиргоо"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Мэдэгдэл харагдахгүй бөгөөд дуугарахгүй"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Мэдэгдлийн дуу алга"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Та мэдэгдэл харахгүй эсвэл сонгохгүй. Одоор тэмдэглэсэн харилцагч болон дахин дуудлага хийгчийн дуудлагыг зөвшөөрдөг."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Одоогийн тохиргоо)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Бүү саад бол горимын мэдэгдлийн тохиргоог өөрчлөх үү?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Ажлын профайлын ая"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Хувийн профайлын аяыг ашиглах"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Хувийн профайлтайгаа ижил ая ашиглана уу"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Түгжээг тайлсны дараа сүүлд ашигласан дэлгэц рүү шууд очно уу. Түгжээтэй дэлгэцэд мэдэгдэл харуулахгүй. Түүнийг харахын тулд дээрээс доош шударна уу."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Түгжигдсэн дэлгэц, Түгжигдсэн дэлгэц, Алгасах, Тойрох"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Ажлын профайлыг түгжсэн үед"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Түгжээтэй дэлгэцийн мэдэгдлийн минимализм"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Түгжээтэй дэлгэц дээр цөөн мэдэгдэл харуулна"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Түгжигдсэн дэлгэцэд зөвхөн шинэ мэдэгдэл харуулах"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Өмнө нь үзсэн мэдэгдлийг түгжигдсэн дэлгэцээс автоматаар хасах"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Түгжээтэй дэлгэц дээрх мэдэгдэл"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"чухал харилцан яриа"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Байхгүй"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Байхгүй}=1{1 харилцан яриа}other{# харилцан яриа}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Харилцан ярианы тохиргоо"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Хэн тасалдуулж болох вэ"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Мессеж эсвэл дуудлагын аппууд танд мэдэгдэх боломжгүй байсан ч таны энд сонгосон хүмүүс тэдгээр аппаар тантай холбоо барих боломжтой хэвээр байна"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Дуудлага"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Дурын хүн"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Харилцагч"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Одоор тэмдэглэсэн харилцагчид"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Харилцагчдын тохиргоо"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Одтой харилцагчийн тохиргоо"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Байхгүй"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Байхгүй"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Сэрүүлэг"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ямар ч апп тасалдуулах боломжгүй}=1{{app_1} тасалдуулах боломжтой}=2{{app_1} болон {app_2} тасалдуулах боломжтой}=3{{app_1}, {app_2}, {app_3} тасалдуулах боломжтой}other{{app_1}, {app_2} болон өөр # апп тасалдуулах боломжтой}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (ажил)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Тооцоолж байна…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Аппын тохиргоо"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Аппуудад дарахыг нь зөвшөөрөх"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Тасалдуулах боломжтой аппууд"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Горим үүсгэх"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Захиалгат горим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Горимын нэр"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Дүрс тэмдэг сонгох"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Календарийн үйл явдал"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Унтах цагийн хэвшил"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Жолоо барьж байхад"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>-аар удирдана"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Өгөгдмөлөөр нээх"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Дэмждэг холбоосыг нээх"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Аппад"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Хөтчидөө"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Энэ аппад веб холбоосыг хэрхэн нээхийг сонгоно уу"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Энэ аппад нээх холбооснууд"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Дэмждэг холбоос"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Бусад өгөгдмөл сонголт"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Таны <xliff:g id="CARRIER_NAME">%1$s</xliff:g>-н багц"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Хиймэл дагуулаар мессеж бичих нь таны бүртгэлд багтсан"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Хиймэл дагуулаар мессеж бичих нь таны бүртгэлд багтаагүй"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Нэмэлт мэдээлэл авах"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Энэ хэрхэн ажилладаг вэ?"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Танд хөдөлгөөнт холбооны сүлжээ байхгүй үед"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Таны утас хиймэл дагуулд автоматаар холбогдоно. Шилдэг холболтыг авах бол тэнгэр тод харагдах газар байгаарай."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR код сканнер"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Тусламж хэрэгтэй юү?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Хайлтын тохиргоо"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"харилцагчид, хадгалах сан, бүртгэл"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Харилцагчдын хадгалах сан"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Өгөгдмөл бүртгэл тохируулаагүй"</string>
 </resources>
