--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Koble til datatjenester ved roaming"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Koble til datatjenester ved roaming"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Roamingavgifter kan påløpe."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Automatisk dato og klokkeslett"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Angi automatisk med nettverket og trådløse signaler"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Automatisk tidssone"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Angi automatisk basert på mobilnettverk i nærheten"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Angi automatisk med enhetsposisjonen, hvis tilgjengelig. Aktiv wifi er kanskje også nødvendig."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Bruk lokal standard"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Bruk 24-timers format"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Tid"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Angi et mønster for det private området"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Lås"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Skjul"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Du kan legge til opptil <xliff:g id="COUNT">%d</xliff:g> fingeravtrykk"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Du har lagt til maksimalt antall fingeravtrykk"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Kan ikke legge til flere fingeravtrykk"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Sjekk passordet og prøv igjen"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Kontakt produsenten av enheten"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Sjekk tilkoblingen og prøv igjen"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Velg et nettverk"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Velg et nettverk for å koble til enheten din"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Vil du legge til denne enheten i «<xliff:g id="SSID">%1$s</xliff:g>»?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"La apper og tjenester søke etter enheter i nærheten når som helst, selv når Bluetooth er slått av. Dette kan for eksempel brukes til å forbedre posisjonsbaserte funksjoner og tjenester."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Posisjonstjenester"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Posisjonstjenester"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Bruk posisjon for å finne tidssonen"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Kan ikke angi tidssonen automatisk"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Posisjon eller posisjonstjenester er av"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Posisjonsinnstillinger"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Løs dette"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Avbryt"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Ikke tilgjengelig når automatisk tidssone er av"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Gjenkjenning av tidssone basert på posisjon er slått av"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Gjenkjenning av tidssone basert på posisjon støttes ikke"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Du har ikke tillatelse til å endre gjenkjenning av tidssone"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Hvis enhetsposisjonen er tilgjengelig, kan den brukes for å angi tidssonen din"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Vis juridisk informasjon, status og programvareversjon"</string>
     <string name="legal_information" msgid="7509900979811934843">"Juridisk informasjon"</string>
     <string name="manual" msgid="3651593989906084868">"Brukerveiledning"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Greit"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Varsler"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Varighet"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Meldinger, aktiviteter og påminnelser"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Når «Ikke forstyrr» er på, ignoreres meldinger, påminnelser og aktiviteter, med unntak av elementene du tillater ovenfor. Du kan justere meldingsinnstillingene for å la venner, familie eller andre kontakter nå deg."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Ferdig"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Innstillinger"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Ingen lyd- eller visuell varsling"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Ingen lydvarsling"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Du verken ser eller hører varsler. Anrop fra stjernemerkede kontakter og gjentatte oppringere tillates."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Gjeldende innstilling)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Vil du endre innstillinger for varsler for «Ikke forstyrr»?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Lyder i jobbprofilen"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Bruk lyder fra personlig profil"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Bruk de samme lydene som for den personlige profilen"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Gå rett til forrige skjerm når enheten låses opp. Varsler vises ikke på låseskjermen. Du kan se dem ved å sveipe ned fra toppen."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Låseskjerm, låseskjerm, hopp over, omgå"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Når jobbprofilen er låst"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Minimer antall varsler på låseskjermen"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Vis færre varsler på låseskjermen"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Bare vis nye varsler på låseskjermen"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Fjern automatisk varsler som er sett, fra låseskjermen"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Varsler på låseskjermen"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"prioriterte samtaler"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Ingen"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ingen}=1{1 samtale}other{# samtaler}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Samtaleinnstillinger"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Hvem kan forstyrre?"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Selv om meldings- eller ringeapper ikke kan varsle deg, kan personene du velger her, fremdeles nå deg via disse appene"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Anrop"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Alle"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontakter"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Stjernemerkede kontakter"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Kontaktinnstillinger"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Innstillinger for stjernemerkede kontakter"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ingen"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Ingen"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarmer"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Ingen apper kan forstyrre}=1{{app_1} kan forstyrre}=2{{app_1} og {app_2} kan forstyrre}=3{{app_1}, {app_2} og {app_3} kan forstyrre}other{{app_1}, {app_2} og # til kan forstyrre}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (jobb)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Beregner …"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Appinnstillinger"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Tillat at apper overstyrer"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Apper som kan forstyrre"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Lag en modus"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Egendefinert modus"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Modusnavn"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Velg et ikon"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Kalenderaktiviteter"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Sengetidsrutine"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Under kjøring"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Administrert av <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Åpne som standard"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Åpne støttede linker"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"I appen"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"I nettleseren"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Velg hvordan nettlinker skal åpnes for denne appen"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Linker som skal åpnes i denne appen"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Støttede linker"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Andre standardinnstillinger"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g>-abonnementet ditt"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Satellittmeldinger er inkludert med kontoen din"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Satellittmeldinger er ikke inkludert med kontoen din"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Finn ut mer"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Slik fungerer det"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Når du ikke har et mobilnettverk"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Telefonen kobles automatisk til en satellitt. Du får best tilkobling på steder med åpen himmel."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-kodeskanner"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Trenger du hjelp?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Søk i innstillingene"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontakter, lagring, konto"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Kontaktlager"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Ingen standard er valgt"</string>
 </resources>
