--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"रोमिङमा हुँदा मोबाइल डेटा प्रयोग गर्नुहोस्"</string>
     <string name="roaming_disable" msgid="729512894708689604">"रोमिङमा हुँदा मोबाइल डेटा प्रयोग गर्नुहोस्"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"रोमिङ शुल्क लाग्न सक्छ।"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"मिति र समय स्वतः सेट गर्ने सुविधा"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"तपाईंको नेटवर्क र वायरलेस सिग्नल प्रयोग गरेर मिति र समय स्वतः सेट गर्नुहोस्"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"स्वचालित प्रामाणिक समय"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"तपाईंको नजिकै भएका मोबाइल नेटवर्कका आधारमा मिति र समय स्वतः सेट गर्नुहोस्"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"उपलब्ध भएमा आफ्नो डिभाइसको लोकेसन प्रयोग गरेर मिति र समय स्वतः सेट गर्नुहोस्। सक्रिय Wi-Fi कनेक्सन पनि चाहिन सक्छ।"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"लोकेलको डिफल्ट सेटिङ प्रयोग गर्नुहोस्"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"२४-घण्टे ढाँचा प्रयोग गर्नुहोस्"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"समय"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"आफ्नो निजी स्पेसका लागि प्याटर्न सेट गर्नुहोस्"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"लक गर्नुहोस्"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"लुकाउनुहोस्"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"तपाईं बढीमा <xliff:g id="COUNT">%d</xliff:g> वटा फिंगरप्रिन्टहरू हाल्न सक्नुहुन्छ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"तपाईंले अधिकतम संख्यामा फिंगरप्रिन्टहरू थप्नुभएको छ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"थप फिंगरप्रिन्टहरू थप्न सकिँदैन"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"पासवर्डको जाँच गरी फेरि प्रयास गर्नुहोस्"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"यन्रको निर्मातासँग सम्पर्क गर्नुहोस्"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"इन्टरनेटको जाँच गरी फेरि प्रयास गर्नुहोस्"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"नेटवर्क छनौट गर्नुहोस्"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"आफ्नो यन्त्र जडान गर्न कुनै नेटवर्क छनौट गर्नुहोस्"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"यो यन्त्रलाई “<xliff:g id="SSID">%1$s</xliff:g>” मा थप्ने हो?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"एप तथा सेवाहरूलाई जुनसुकै बेला (ब्लुटुथ अफ भएको बेलामा पनि) वरपरका डिभाइस खोज्ने अनुमति दिनुहोस्‌। यसलाई लोकेसनमा आधारित सुविधा तथा सेवाहरू सुधार गर्ने जस्ता कार्यहरू गर्नाका लागि प्रयोग गर्न सकिन्छ।"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"लोकेसन सर्भिस"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"लोकेसनसम्बन्धी सेवाहरू"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"प्रामाणिक समयका लागि लोकेसन प्रयोग गर्नुहोस्"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"प्रामाणिक समय स्वतः तय गर्न सकिँदैन"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"लोकेसन वा लोकेसन सेवाहरू अफ छन्"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"लोकेसन सेटिङ"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"यसलाई सच्याउनुहोस्"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"रद्द गर्नुहोस्"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"स्वचालित प्रामाणिक समय अफ हुँदा यो सुविधा उपलब्ध हुँदैन"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"स्थानको प्रामाणिक समय पत्ता लगाउने सुविधा असक्षम पारिएको छ"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"स्थानको प्रामाणिक समय पत्ता लगाउने सुविधा प्रयोग गर्न मिल्दैन"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"स्थानको प्रामाणिक समय पत्ता लगाउने सुविधासम्बन्धी सेटिङ परिवर्तन गर्न पाइँदैन"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"तपाईंको डिभाइसको लोकेसन उपलब्ध भएका खण्डमा यसलाई तपाईंको प्रामाणिक समय सेट गर्न प्रयोग गरिन सक्छ"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"कानुनी जानकारी, वस्तुस्थिति, सफ्ट्वेयर संस्करण हेर्नुहोस्"</string>
     <string name="legal_information" msgid="7509900979811934843">"कानुनी जानकारी"</string>
     <string name="manual" msgid="3651593989906084868">"म्यानुअल"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"बुझेँ"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"सूचनाहरू"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"अवधि"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"सन्देश, कार्यक्रम तथा रिमाइन्डरहरू"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"बाधा नपुर्‍याउनुहोस् मोड सक्रिय भएका बेला तपाईंले माथि अनुमति दिनुभएका वस्तुहरूबाहेक सन्देश, रिमाइन्डर तथा कार्यक्रमहरूलाई म्युट गरिने छ। तपाईं आफ्ना साथीभाइ, परिवारजन वा अन्य सम्पर्कहरूलाई आफूसँग सम्पर्क राख्न दिने गरी सन्देशसम्बन्धी सेटिङहरू समायोजन गर्न सक्नुहुन्छ।"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"सम्पन्न भयो"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"सेटिङहरू"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">" सूचना आउँदा भिजुअल वा साउन्ड नआओस्"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"सूचना आउँदा साउन्ड नआओस्"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"तपाईं सूचनाहरू देख्न वा सुन्न सक्नु हुने छैन। ताराङ्कित सम्पर्क ठेगाना तथा बारम्बार कल गर्ने व्यक्तिका कलहरू।"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(हालको सेटिङ)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"बाधा नपुर्याउनुहोस् नामक मोडका सूचनासम्बन्धी सेटिङहरू बदल्ने हो?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"कार्य प्रोफाइलको साउन्ड"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"व्यक्तिगत प्रोफाइलका साउन्डहरूको प्रयोग गर्नुहोस्"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"तपाईंको व्यक्तिगत प्रोफाइलमा सेट गरिएको साउन्ड प्रयोग गरिन्छ"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"अनलक गरेपछि सीधै पछिल्लो पटक प्रयोग गरिएकै स्क्रिनमा पुग्नुहोस्। लक स्क्रिनमा सूचनाहरू देखाइने छैनन्। सूचनाहरू हेर्न सिरानबाट तलतिर स्वाइप गर्नुहोस्।"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"लक स्क्रिन, लकस्क्रिन, छाड्नुहोस्, बाइपास गर्नुहोस्"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"कार्य प्रोफाइल लक हुँदा"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"लक स्क्रिनमा थोरै नोटिफिकेसनहरू देखाउने विकल्प"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"लक स्क्रिनमा अझ थोरै नोटिफिकेसनहरू देखाउनुहोस्"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"लक स्क्रिनमा नयाँ सूचनाहरू मात्र देखाउनुहोस्"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"यसअघि हेरिएका सूचनाहरू लक स्क्रिनबाट स्वतः हटाउनुहोस्"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"लक स्क्रिनमा देखाइने सूचनाहरू"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"महत्त्वपूर्ण वार्तालापहरू"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"कुनै पनि होइन"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{कुनै पनि वार्तालाप होइन}=1{एउटा वार्तालाप}other{# वटा वार्तालाप}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"वार्तालापसम्बन्धी सेटिङ"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"यो सेटिङ लागू नहुने व्यक्तिहरू"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"तपाईंले म्यासेजिङ वा कलिङ एपबाट सूचना प्राप्त गर्नुभएन भने पनि तपाईंले रोज्नुभएका मान्छेले ती एपमार्फत तपाईंलाई सम्पर्क भने गरिरहन सक्छन्"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"कलहरू"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"जोसुकै"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"कन्ट्याक्टहरू"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"ताराङ्कित कन्ट्याक्टहरू"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"कन्ट्याक्टसम्बन्धी सेटिङ"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"ताराङ्कित कन्ट्याक्टसम्बन्धी सेटिङ"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"कुनै पनि होइन"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"कुनै पनि होइन"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"अलार्महरू"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{कुनै पनि एपले बाधा पुर्‍याउन सक्दैन}=1{{app_1} ले बाधा पुर्‍याउन सक्छ}=2{{app_1} र {app_2} ले बाधा पुर्‍याउन सक्छन्}=3{{app_1}, {app_2} र {app_3} ले बाधा पुर्‍याउन सक्छन्}other{{app_1}, {app_2} र अरू # एपले बाधा पुर्‍याउन सक्छन्}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (काम)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"हिसाब गरिँदै छ…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"एपसम्बन्धी सेटिङ"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"एपहरूलाई ओभरराइड गर्ने अनुमति दिनुहोस्"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"अफ गर्न सक्ने एपहरू"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"मोड बनाउनुहोस्"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"कस्टम मोड"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"मोडको नाम"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"कुनै आइकन छनौट गर्नुहोस्"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"पात्रोमा सेट गरिएका कार्यक्रमहरू"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"सुत्ने समयको रुटिन"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"सवारी साधन चलाइरहेका बेला"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g> द्वारा व्यवस्थापन गरिएको"</string>
     <string name="launch_by_default" msgid="892824422067985734">"स्वत: खोल्नुहोस्"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"खोल्न मिल्ने लिंक खोल्न सकियोस्"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"एपमा"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"तपाईंको ब्राउजरमा"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"यो एपका हकमा वेब लिंकहरू खोल्ने तरिका छनौट गर्नुहोस्"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"यो एपमा खोलिनु पर्ने लिंकहरू"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"समर्थित लिंकहरू"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"अन्य डिफल्ट प्राथमिकताहरू"</string>
@@ -5451,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR कोड स्क्यानर"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"मद्दत चाहिन्छ?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"सेटिङ खोज्नुहोस्"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"कन्ट्याक्ट, भण्डारण, खाता"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"कन्ट्याक्टहरूको भण्डारण"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"कुनै डिफल्ट खाता सेट गरिएको छैन"</string>
 </resources>
