--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Conectează-te la servicii de date în roaming"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Conectează-te la serviciile de date în roaming"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Se pot aplica tarife de roaming."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Dată și oră automate"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Setează automat folosind semnalele de rețea și wireless"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Fus orar automat"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Setează automat în funcție de rețelele mobile din apropiere"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Setează automat folosind locația, dacă este disponibilă. Poate fi necesară o conexiune Wi-Fi activă."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Folosește codul local prestabilit"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Folosește formatul de 24 de ore"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Oră"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Setează un model pentru spațiul privat"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Blochează"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ascunde"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Poți să adaugi până la <xliff:g id="COUNT">%d</xliff:g> amprente"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Ai adăugat numărul maxim de amprente digitale"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Nu se mai pot adăuga amprente digitale"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Verifică parola și încearcă din nou"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Contactează producătorul dispozitivului"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Verifică conexiunea și încearcă din nou"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Alege rețeaua"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Pentru a vă conecta dispozitivul, alegeți o rețea"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Adaugi acest dispozitiv la „<xliff:g id="SSID">%1$s</xliff:g>”?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Permite aplicațiilor și serviciilor să caute permanent dispozitive din apropiere, chiar și atunci când setarea Bluetooth este dezactivată. Această permisiune poate fi folosită, de exemplu, pentru a îmbunătăți funcțiile și serviciile bazate pe locație."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Servicii de localizare"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Servicii de localizare"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Folosește locația pentru fusul orar"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Fusul orar nu poate fi setat automat"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Locația sau serviciile de localizare sunt dezactivate"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Setări privind locația"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Remediază problema"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Anulează"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Nu este disponibilă când fusul orar automat este dezactivat"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Detectarea fusului orar al locației este dezactivată"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Detectarea fusului orar al locației nu este acceptată"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Modificările detectării fusului orar al locației nu sunt permise"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Dacă locația dispozitivului este disponibilă, se poate folosi pentru a seta fusul orar"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Afișează informații legale, starea și versiunea programului software"</string>
     <string name="legal_information" msgid="7509900979811934843">"Informații de ordin juridic"</string>
     <string name="manual" msgid="3651593989906084868">"Manual"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"OK"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Notificări"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Durata"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Mesaje, evenimente și mementouri"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Când este activat modul Nu deranja, sunetele pentru mesaje, mementouri și evenimente vor fi dezactivate, cu excepția elementelor pe care le permiți mai sus. Poți să modifici setările pentru mesaje ca să le permiți prietenilor, familiei sau altor persoane de contact să te contacteze."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Gata"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Setări"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Fără imagini sau sunet de la notificări"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Fără sunet de la notificări"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Nu vei vedea și nu vei auzi notificări. Sunt permise apelurile de la persoanele de contact marcate cu stea și de la apelanții care revin."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Setarea curentă)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Modifici setările pentru notificări ale modului „Nu deranja”?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Sunetele profilului de serviciu"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Folosește sunetele profilului personal"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Folosește aceleași sunete ca pentru profilul personal"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"După deblocare, accesează ultimul ecran folosit. Notificările nu vor apărea pe ecranul de blocare. Glisează în jos din partea de sus ca să le vezi."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Ecran de blocare, Ecran de blocare, Omitere, Evitare"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Când este blocat profilul de serviciu"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Reducerea numărului notificărilor de pe ecranul de blocare"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Afișează mai puține notificări pe ecranul de blocare"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Afișează doar notificări noi pe ecranul de blocare"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Elimină automat notificările afișate anterior de pe ecranul de blocare"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Notificări pe ecranul de blocare"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"conversații prioritare"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Niciuna"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Niciuna}=1{O conversație}few{# conversații}other{# de conversații}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Setări pentru conversații"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Cine poate întrerupe"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Chiar dacă aplicațiile de mesagerie sau apeluri nu îți pot trimite notificări, persoanele alese aici te pot contacta prin aceste aplicații"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Apeluri"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Oricine"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Contacte din Agendă"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Persoane din agendă marcate cu stea"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Setările Agendei"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Setări pentru persoanele de contact cu stea"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Niciunul"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Niciunul"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarme"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Nicio aplicație nu îl poate întrerupe}=1{{app_1} îl poate întrerupe}=2{{app_1} și {app_2} îl pot întrerupe}=3{{app_1}, {app_2} și {app_3} îl pot întrerupe}few{{app_1}, {app_2} și încă # îl pot întrerupe}other{{app_1}, {app_2} și încă # îl pot întrerupe}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (Serviciu)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Se calculează..."</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Setările aplicațiilor"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Permite aplicațiilor să ignore"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Aplicații care pot întrerupe"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Creează un mod"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Mod personalizat"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Numele modului"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Alege o pictogramă"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Evenimente din calendar"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Rutina orei de culcare"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"La volan"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Gestionat de <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Deschide în mod prestabilit"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Deschide linkurile acceptate"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"În aplicație"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"În browser"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Alege modul de deschidere a linkurilor web pentru aplicație"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Linkuri de deschis în această aplicație"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Linkuri acceptate"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Alte preferințe prestabilite"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Planul tău <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Mesajele prin satelit sunt incluse în contul tău"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Mesajele prin satelit nu sunt incluse în contul tău"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Află mai multe"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Cum funcționează"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Când nu este disponibilă o rețea mobilă"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Telefonul se va conecta automat la un satelit. Pentru o conexiune optimă, trebuie să vezi cerul clar."</string>
@@ -5453,10 +5449,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Scanner de coduri QR"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Ai nevoie de ajutor?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Caută în setări"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"agendă, spațiu de stocare, cont"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Stocarea datelor din Agendă"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Nicio setare prestabilită"</string>
 </resources>
