--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -210,7 +210,7 @@
     <string name="title_regional_pref_footer" msgid="7450438024324794380">"Если в приложении нельзя выбрать регион, будут использоваться настройки по умолчанию."</string>
     <string name="desc_regional_pref_footer_learn_more" msgid="4401708653329230081">"Узнайте больше о языковых настройках"</string>
     <string name="category_title_terms_of_address" msgid="4309422700380895278">"Дополнительные настройки"</string>
-    <string name="terms_of_address_title" msgid="7338630812197476808">"Выбрать, как к вам обращаться"</string>
+    <string name="terms_of_address_title" msgid="7338630812197476808">"Выберите, как к вам обращаться"</string>
     <string name="terms_of_address_summary" msgid="7802443422612600620">"Настроить обращение к вам на устройстве"</string>
     <string name="terms_of_address_intro_title" msgid="1533951542181569335">"Этот параметр позволяет большинству системных приложений определить, как к вам нужно обращаться. Он не действует для установленных приложений."</string>
     <string name="terms_of_address_not_specified" msgid="4439257779351251973">"Не указано"</string>
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Подключаться к службам передачи данных при роуминге"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Подключаться к службам передачи данных при роуминге"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Может взиматься плата за роуминг."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Автоматическое определение даты и времени"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Устанавливать автоматически, используя сеть устройства и беспроводные сигналы"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Автоматическое определение часового пояса"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Устанавливать автоматически, используя мобильные сети поблизости"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Устанавливать автоматически, используя геолокацию. Может требоваться подключение к Wi-Fi."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Региональные настройки по умолчанию"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24-часовой формат"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Время"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Создайте ключ для личного пространства"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Блокировка"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ограничение доступа"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Максимальное количество отпечатков пальца, которые можно добавить: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы уже добавили максимальное количество отпечатков"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Больше нельзя добавить отпечатки пальцев"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Проверьте пароль и повторите попытку."</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Обратитесь к производителю устройства."</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Проверьте подключение и повторите попытку."</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Выбор сети"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Чтобы подключить устройство, выберите сеть."</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Подключить это устройство к сети \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Разрешить приложениям и сервисам искать устройства поблизости, даже когда Bluetooth отключен. Это может улучшить работу функций и сервисов, использующих данные о местоположении."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Сервисы геолокации"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Сервисы геолокации"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Использовать геолокацию для определения часового пояса"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Невозможно установить часовой пояс автоматически"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Геолокация отключена."</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Настройки геолокации"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Исправить"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Отмена"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Недоступно, если автоматическое определение часового пояса отключено"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Определение часового пояса с помощью геолокации отключено."</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Определение часового пояса с помощью геолокации не поддерживается."</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Вы не можете изменить настройки определения часового пояса с помощью геолокации."</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Если вы включили геолокацию, часовой пояс может устанавливаться на основе данных о местоположении устройства"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Просмотр юридической информации, состояния планшетного ПК и версии ПО"</string>
     <string name="legal_information" msgid="7509900979811934843">"Юридическая информация"</string>
     <string name="manual" msgid="3651593989906084868">"Руководство"</string>
@@ -3168,7 +3170,7 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Разрешить изменение настроек Wi‑Fi и мобильной сети"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Разрешить изменение настроек Bluetooth-подключения"</string>
-    <string name="restriction_location_enable_title" msgid="4872281754836538066">"Местоположение"</string>
+    <string name="restriction_location_enable_title" msgid="4872281754836538066">"Геолокация"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Разрешить приложениям использовать данные о вашем местоположении"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Далее"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"ОК"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Уведомления"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Длительность"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Сообщения, напоминания и уведомления о мероприятиях"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"В режиме \"Не беспокоить\" сообщения, напоминания и уведомления о мероприятиях будут приходить без звука (за исключением тех, для которых вы задали разрешения выше). Вы можете изменить настройки, чтобы сообщения от членов семьи, друзей и других контактов приходили со звуком."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"ОК"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Настройки"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Отключить звук и отображение уведомлений"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Отключить звук уведомлений"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Уведомления будут полностью отключены. Вы сможете получать звонки только от помеченных контактов и от людей, звонящих повторно."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(выбрано)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Изменить настройки уведомлений в режиме \"Не беспокоить\"?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Сигналы в рабочем профиле"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Использовать звуки из личного профиля"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Использовать те же звуки, что и в личном профиле"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"После разблокировки переходить к последнему открытому экрану. На заблокированном экране уведомления не показываются. Для их просмотра проведите вниз."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Заблокированный экран, пропустить, перейти"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Когда рабочий профиль заблокирован"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Меньше уведомлений на заблокированном экране"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"На заблокированном экране будет показываться меньше уведомлений"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Только новые уведомления на заблокированном экране"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Автоматически удалять просмотренные уведомления с заблокированного экрана"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Уведомления на заблок. экране"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"важные разговоры"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Нет"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Ни одного}=1{1 чат}one{# чат}few{# чата}many{# чатов}other{# чата}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Настройки разговоров"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Для кого не действует режим \"Не беспокоить\""</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Даже если отключены уведомления мессенджеров и приложений для звонков, вы будете получать сообщения и вызовы от контактов, указанных здесь."</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Вызовы"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Все"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Контакты"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Помеченные контакты"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Настройки Контактов"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Настройки помеченных контактов"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Нет"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Нет"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Будильники"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Режим \"Не беспокоить\" действует для всех приложений}=1{Режим \"Не беспокоить\" не действует для приложения \"{app_1}\"}=2{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\" и \"{app_2}\"}=3{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\", \"{app_2}\" и \"{app_3}\"}one{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\", \"{app_2}\" и ещё #}few{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\", \"{app_2}\" и ещё #}many{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\", \"{app_2}\" и ещё #}other{Режим \"Не беспокоить\" не действует для приложений \"{app_1}\", \"{app_2}\" и ещё #}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (работа)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Подождите…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Настройки приложений"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Разрешить приложениям переопределять \"Не беспокоить\""</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Приложения, для которых не действует режим \"Не беспокоить\""</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Создание режима"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Пользовательский режим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Название режима"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Выберите значок"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Мероприятия из календаря"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Режим сна"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Во время вождения"</string>
@@ -5450,10 +5450,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Сканер QR-кодов"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Нужна помощь?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Поиск по настройкам"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"контакты, хранилище, аккаунт"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Контакты"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Аккаунт по умолчанию не задан"</string>
 </resources>
