--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"රෝමින් අතරතුර දත්ත සේවා වෙත සම්බන්ධ වන්න"</string>
     <string name="roaming_disable" msgid="729512894708689604">"රෝමින් අතරතුර දත්ත සේවා වෙත සම්බන්ධ වන්න"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"රෝමිං ගාස්තු අදාළ විය හැකිය."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"ස්වයංක්‍රීය දිනය සහ වේලාව"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"ඔබේ ජාලය සහ රැහැන් රහිත සංඥා භාවිතයෙන් ස්වයංක්‍රීයව සකසන්න"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"ස්වයංක්‍රීය වේලා කලාපය"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"ඔබ අසල ඇති ජංගම ජාල මත පදනම්ව ස්වයංක්‍රීයව සකසන්න"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"තිබේ නම්, ඔබේ උපාංග ස්ථානය භාවිතයෙන් ස්වයංක්‍රීයව සකසන්න. සක්‍රිය Wifi සම්බන්ධතාවයක් ද අවශ්‍ය විය හැක."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"පෙදෙසි පෙරනිමි භාවිත කරන්න"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"පැය 24 ආකාරය භාවිත කරන්න"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"වේලාව"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ඔබේ පෞද්ගලික අවකාශය සඳහා රටාවක් සකසන්න"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"අගුලු දමන්න"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"සඟවන්න"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ඔබට ඇඟිලි සලකුණු <xliff:g id="COUNT">%d</xliff:g> දක්වා එකතු කළ හැකිය"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ඔබ ඇඟිලි සලකුණු උපරිම සංඛ්‍යාව එක් කර ඇත"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"තවත් ඇඟිලි සලකුණු එක් කළ නොහැකිය"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"මුරපදය පරීක්ෂා කර නැවත උත්සාහ කරන්න"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"උපාංග නිෂ්පාදක අමතන්න"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"සම්බන්ධතාව පරීක්‍ෂා කර නැවත උත්සාහ කරන්න"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"ජාලය තෝරන්න"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"ඔබේ උපාංගය සම්බන්ධ කිරීමට, ජාලයක් තෝරන්න"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"මෙම උපාංගය “<xliff:g id="SSID">%1$s</xliff:g>”ට එක් කරන්නේද?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"බ්ලූටූත් ක්‍රියාවිරහිත විට පවා, ඕනෑම අවස්ථාවක අවට උපාංග සඳහා ස්කෑන් කිරීමට යෙදුම් සහ සේවාවලට ඉඩ දෙන්න. උදාහරණයක් ලෙස, ස්ථානය-පදනම් වූ විශේෂාංග සහ සේවා වැඩි දියුණු කිරීම සඳහා මෙය භාවිත කළ හැකිය."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"ස්ථාන සේවා"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"ස්ථාන සේවා"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"වේලා කලාපය සඳහා ස්ථානය භාවිත කරන්න"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"වේලා කලාපය ස්වයංක්‍රීයව සැකසිය නොහැක"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"ස්ථානය හෝ ස්ථාන සේවා ක්‍රියාවිරහිතයි"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"ස්ථාන සැකසීම්"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"මෙය නිරාකරණය කරන්න"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"අවලංගු කරන්න"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"ස්වයංක්‍රීය වේලා කලාපය ක්‍රියාවිරහිත වූ විට ලබා ගත නොහැක"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"ස්ථාන වේලා කලාපය අනාවරණය කර ගැනීම අබලයි"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"ස්ථාන වේලා කලාපය අනාවරණය කර ගැනීම සහාය නොදක්වයි"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"ස්ථාන වේලා කලාපය අනාවරණය කර ගැනීමේ වෙනස් කිරීම් ඉඩ නොදේ"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"ඔබේ උපාංග ස්ථානය තිබේ නම්, එය ඔබේ වේලා කලාපය සැකසීමට භාවිතා කළ හැක"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"නීතිමය තොරතුරු, තත්වය, මෘදුකාංග අනුවාදය පෙන්වන්න"</string>
     <string name="legal_information" msgid="7509900979811934843">"නීතිමය තොරතුරු"</string>
     <string name="manual" msgid="3651593989906084868">"අත්පොත"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"තේරුණා"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"දැනුම්දීම්"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"කාල සීමාව"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"පණිවිඩ, සිදුවීම් සහ සිහිැඳවීම්"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"බාධා නොකරන්න ක්‍රියාත්ම විට, ඔබ ඉහත අවසර දෙනු ලබන අයිතම හැරුණු විට, පණිවිඩ, සිහි කැඳවීම් සහ සිදුවීම් අවහිර කරනු ඇත. ඔබගේ මිතුරන්, පවුලේ අය හෝ වෙනත් සම්බන්ධතාවලට ඔබ සමග සම්බන්ධ වීමට ඉඩ දීමට පණිවිඩ සැකසීම් සකස් කිරීමට ඔබට හැකිය."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"නිමයි"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"සැකසීම්"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"දැනුම්දීම්වලින් දෘශ්‍ය හෝ හඬ නැත"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"දැනුම්දීම් වෙතින් හඬ නැත"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"ඔබට දැනුම්දීම් දැකීමට හෝ ඇසීමට නොලැබෙනු ඇත. තරු ලකුණු යෙදූ සම්බන්ධතා සහ පුනරාවර්තන ඇමතුම්කරුවන් වෙතින් වන ඇමතුම්වලට ඉඩ දෙනු ලැබේ."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(වත්මන් සැකසීම)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"බාධා නොකරන්න දැනුම්දීම් සැකසීම් වෙනස් කරන්නද?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"කාර්යාල පැතිකඩ හඬවල්"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"පුද්ගලික පැතිකඩ හඬ භාවිත කර."</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"ඔබගේ පුද්ගලික පැතිකඩට සමාන ශබ්ද භාවිත කරන්න"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"අගුලු හැරීමෙන් පසු, අවසන් වරට භාවිත කළ තිරය වෙත කෙළින්ම යන්න. අගුලු තිරයේ දැනුම්දීම් නොපෙන්වයි. ඒවා බැලීමට ඉහළ සිට පහළට ස්වයිප් කරන්න."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"අගුළු තිරය, අගුළුතිරය, මඟහරින්න, මඟහැරයාම"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"කාර්යාල පැතිකඩ අගුලු දමා ඇති විට"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"අගුළු තිර දැනුම්දීම් අවමවාදය"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"අගුළු තිරය මත දැනුම්දීම් අඩුවෙන් පෙන්වන්න"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"අගුළු තිරයෙහි නව දැනුම්දීම් පමණක් පෙන්වන්න"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"අගුළු තිරයෙන් කලින් බැලූ දැනුම්දීම් ස්වයංක්‍රීයව ඉවත් කරන්න"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"අගුලු තිරයෙහි දැනුම් දීම්"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"ප්‍රමුඛතා සංවාද"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"කිසිවක් නැත"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{කිසිත් නැත}=1{සංවාද 1}one{සංවාද #}other{සංවාද #}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"සංවාද සැකසීම්"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"බාධා කළ හැකි අය"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"පණිවිඩ යැවීමේ හෝ ඇමතීමේ යෙදුම්වලට ඔබට දැනුම් දිය නොහැකි වුවද, ඔබ මෙහි තෝරා ගන්නා පුද්ගලයන්ට එම යෙදුම් හරහා ඔබ වෙත ළඟා විය හැකිය"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"ඇමතුම්"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"ඕනෑම කෙනෙක්"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"සම්බන්ධතා"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"තරු ලකුණු යෙදූ සම්බන්ධතා"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"සම්බන්ධතා සැකසීම්"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"තරු ලකුණු කළ සම්බන්ධතා සැකසීම්"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"කිසිවක් නැත"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"කිසිවක් නැත"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"ඇඟවීම්"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{යෙදුම් කිසිවකට බාධා කළ නොහැක}=1{{app_1} හට බාධා කළ හැක}=2{{app_1} සහ {app_2} හට බාධා කළ හැක}=3{{app_1}, {app_2}, සහ {app_3} හට බාධා කළ හැක}one{{app_1}, {app_2}, සහ තවත් #ක් හට බාධා කළ හැක}other{{app_1}, {app_2}, සහ තවත් #ක් හට බාධා කළ හැක}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (කාර්යාලය)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"ගණනය කරමින්…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"යෙදුම් සැකසීම්"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ප්‍රතික්ෂේප කිරිමට යෙදුම්වලට ඉඩ දෙන්න"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"බාධා කළ හැකි යෙදුම්"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"ප්‍රකාරයක් තනන්න"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"අභිරුචි ප්‍රකාරය"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ප්‍රකාරයේ නම"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"නිරූපකයක් තෝරා ගන්න"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"දින දර්ශන සිදුවීම්"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"නින්දට යන වේලාවේ දින චර්යාව"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"ධාවනය කරන අතරතුර"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g> විසින් කළමනාකරණය කරන ලදී"</string>
     <string name="launch_by_default" msgid="892824422067985734">"පෙරනිමියෙන් විවෘත කරන්න"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"සහය දක්වන සබැඳි විවෘත කරන්න"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"යෙදුම තුළ"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"ඔබේ බ්‍රව්සරය තුළ"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"මෙම යෙදුම සඳහා වෙබ් සබැඳි විවෘත කරන ආකාරය තෝරා ගන්න"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"මෙම යෙදුම තුළ විවෘත කිරීමට සබැඳි"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"සහය දක්වන සබැඳි"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"වෙනත් පෙරනිමි මනාප"</string>
@@ -5451,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR කේත ස්කෑනරය"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"උදවු අවශ්‍ය ද?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"සෙවීමේ සැකසීම්"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"සම්බන්ධතා, ආචයනය, ගිණුම"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"සම්බන්ධතා ආචයනය"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"පෙරනිමි සැකසීමක් නැත"</string>
 </resources>
