--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Unganisha huduma ya data ninapotumia mitandao ya ng\'ambo"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Unganisha huduma ya data ninapotumia mitandao ya ng\'ambo"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Huenda ukatozwa ada za kutumia mitandao ya ng\'ambo."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Mipangilio otomatiki ya tarehe na wakati"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Weka mipangilio otomatiki ukitumia mtandao wako na mawimbi ya simu za mkononi"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Mipangilio otomatiki ya saa za eneo"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Weka mipangilio otomatiki kulingana na mitandao ya simu iliyo karibu nawe"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Weka mipangilio otomatiki ukitumia data ya mahali kilipo kifaa chako, ikiwa inapatikana. Huenda pia ukahitaji muunganisho wa Wi-Fi unaotumika."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Tumia chaguomsingi la eneo"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Tumia mpangilio wa saa 24"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Saa"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Weka mchoro wa sehemu yako ya faragha"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Funga"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ficha"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Unaweza kuongeza hadi alama za vidole <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Umeongeza idadi ya juu inayoruhusiwa ya alama za kidole"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Haiwezi kuongeza alama zaidi za kidole"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Angalia nenosiri na ujaribu tena"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Wasiliana na mtengenezaji wa kifaa"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Angalia muunganisho na ujaribu tena"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Chagua mtandao"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Ili uunganishe kifaa chako, chagua mtandao"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Ungependa kuongeza kifaa hiki kwenye “<xliff:g id="SSID">%1$s</xliff:g>”?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Ruhusu programu na huduma zitafute vifaa vilivyo karibu wakati wowote, hata wakati umezima Bluetooth. Hali hii inaweza kutumika, kwa mfano, kuboresha huduma na vipengele vinavyohusiana na mahali."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Huduma za mahali"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Huduma za mahali"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Tumia data ya mahali kuweka mipangilio ya saa za eneo"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Huwezi kuweka saa za eneo kiotomatiki"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Data ya mahali au Huduma za Mahali zimezimwa"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Mipangilio ya mahali"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Rekebisha hii"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Ghairi"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Haipatikani wakati mipangilio otomatiki ya saa za eneo imezimwa"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Utambuzi wa saa za eneo umezimwa"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Utambuzi wa saa za eneo hautumiki"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Huruhusiwi kufanya mabadiliko kwenye utambuzi wa saa za eneo"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Ikiwa data ya mahali kilipo kifaa chako inapatikana, inaweza kutumiwa kuweka mipangilio ya saa za eneo uliko"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Angalia maelezo ya kisheria, hadhi, toleo la programu"</string>
     <string name="legal_information" msgid="7509900979811934843">"Maelezo ya kisheria"</string>
     <string name="manual" msgid="3651593989906084868">"Mwongozo"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"Nimeelewa"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Arifa"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Muda"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Ujumbe, matukio na vikumbusho"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Ukiwasha kipengele cha Usinisumbue, ujumbe, vikumbusho na matukio yatakomeshwa, isipokuwa yanayotoka kwenye vipengee unavyoruhusu hapo juu. Unaweza kubadilisha mipangilio ya ujumbe ili uwaruhusu marafiki, familia na watu wengine wawasiliane nawe."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Nimemaliza"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Mipangilio"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Arifa zisionekane wala zisitoe sauti"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Arifa zisitoe sauti"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Hutaona wala kusikia arifa. Simu kutoka anwani zenye nyota na wanaorudia kupiga simu zinaruhusiwa."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Mipangilio ya sasa)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Ungependa kubadilisha mipangilio ya arifa za Usinisumbue?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Sauti za wasifu wa kazini"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Tumia sauti za wasifu wako binafsi"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Tumia sauti sawa na zile za wasifu wako wa binafsi"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Ukishafungua, nenda kwenye skrini uliyotumia mwisho. Arifa hazitaonyeshwa kwenye skrini iliyofungwa. Telezesha kidole chini kutoka juu ili uzione."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Skrini iliyofungwa, Kufunga skrini, Ruka, Kwepa"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Wakati umefunga wasifu wa kazini"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Kupunguza arifa kwenye skrini iliyofungwa"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Onyesha arifa chache kwenye skrini iliyofungwa"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Onyesha arifa mpya pekee kwenye skrini iliyofungwa"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Ondoa kiotomatiki arifa zilizotazamwa awali kwenye skrini iliyofungwa"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Arifa kwenye skrini iliyofungwa"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"mazungumzo ya kipaumbele"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Hamna"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Hamna}=1{Mazungumzo 1}other{Mazungumzo #}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Mipangilio ya mazungumzo"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Anayeweza kukatiza"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Hata kama programu za kutuma ujumbe au kupiga simu hazitaweza kukuarifu, watu unaowachagua hapa bado wanaweza kukupata kupitia programu hizo"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Simu"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Mtu yeyote"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Anwani"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Anwani zenye nyota"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Mipangilio ya anwani"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Mipangilio ya anwani zenye nyota"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Hamna"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Hamna"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Kengele"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Hakuna programu zinazoweza kukatiza}=1{{app_1} inaweza kukatiza}=2{{app_1} na {app_2} zinaweza kukatiza}=3{{app_1}, {app_2} na {app_3} zinaweza kukatiza}other{{app_1}, {app_2} na nyingine # zinaweza kukatiza}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (Kazini)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Inahesabu…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Mipangilio ya programu"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Ruhusu programu zibatilishe hali"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Programu zinazoweza kukatiza"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Anzisha hali"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Hali maalum"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Jina la hali"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Chagua aikoni"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Matukio ya kalenda"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Ratiba ya wakati wa kulala"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Unapoendesha gari"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Inasimamiwa na <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Fungua moja kwa moja"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Fungua viungo vinavyoweza kutumika"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Kwenye programu"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Kwenye kivinjari chako"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Chagua jinsi ya kufungua viungo vya wavuti vya programu hii"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Viungo vya kufunguka katika programu hii"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Viungo vinavyoweza kutumika"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Mapendeleo mengine chaguomsingi"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Mpango wako wa <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Huduma ya kutuma ujumbe kupitia setilaiti imejumuishwa kwenye akaunti yako"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Huduma ya kutuma ujumbe kupitia setilaiti haijajumuishwa kwenye akaunti yako"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Pata Maelezo Zaidi"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Utaratibu wake"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Ukiwa huna mtandao wa simu"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Simu yako itaunganisha kiotomatiki kwenye setilaiti. Kwa muunganisho bora, hakikisha anga inaonekana vizuri."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Kichanganuzi cha msimbo wa QR"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Je, unahitaji usaidizi?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Mipangilio ya Utafutaji"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"anwani, nafasi ya hifadhi, akaunti"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Nafasi ya kuhifadhi ya anwani"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Hujaweka akaunti chaguomsingi"</string>
 </resources>
