--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"ரோமிங்கின் போது டேட்டா சேவைகளுடன் இணை"</string>
     <string name="roaming_disable" msgid="729512894708689604">"ரோமிங்கின் போது டேட்டா சேவைகளுடன் இணை"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"ரோமிங் கட்டணங்கள் விதிக்கப்படக்கூடும்."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"தேதியையும் நேரத்தையும் தானாகவே அமைத்தல்"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"உங்கள் நெட்வொர்க்கையும் வயர்லெஸ் சிக்னல்களையும் பயன்படுத்தி தானாகவே அமைக்கும்"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"நேர மண்டலத்தைத் தானாகவே கண்டறிதல்"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"உங்களுக்கு அருகிலுள்ள மொபைல் நெட்வொர்க்குகளின் அடிப்படையில் தானாகவே அமைக்கும்"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"கிடைத்தால், சாதன இருப்பிடம் மூலம் தானாகவே அமைக்கும். செயலிலுள்ள வைஃபை இணைப்பும் தேவைப்படலாம்."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"உள்ளூர் நேர வடிவத்தைப் பயன்படுத்து"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24-மணிநேர வடிவமைப்பு"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"நேரம்"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"தனிப்பட்ட இடத்திற்கான பேட்டர்னை அமைத்தல்"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"லாக் செய்தல்"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"மறைத்தல்"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"<xliff:g id="COUNT">%d</xliff:g> கைரேகைகள் வரை சேர்க்கலாம்"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"அனுமதிக்கப்படும் அதிகபட்சக் கைரேகைகளைச் சேர்த்துவிட்டீர்கள்"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"மேலும் கைரேகைகளைச் சேர்க்க முடியவில்லை"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"கடவுச்சொல்லைச் சரிபார்த்து மீண்டும் முயலவும்"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"சாதன தயாரிப்பாளரைத் தொடர்புகொள்ளவும்"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"இணைப்பைச் சரிபார்த்து மீண்டும் முயலவும்"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"நெட்வொர்க்கைத் தேர்வுசெய்தல்"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"உங்கள் சாதனத்தை இணைப்பதற்கு நெட்வொர்க் ஒன்றைத் தேர்வுசெய்யவும்"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"“<xliff:g id="SSID">%1$s</xliff:g>” இல் சாதனத்தைச் சேர்க்கவா?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"புளூடூத் ஆஃப் செய்யப்பட்டிருந்தாலும்கூட, எந்தநேரத்திலும் அருகிலுள்ள சாதனங்களைத் தேட, ஆப்ஸையும் சேவைகளையும் அனுமதிக்கும். மற்றவற்றிற்கும் இதைப் பயன்படுத்தலாம், உதாரணமாக, இருப்பிடம் சார்ந்த அம்சங்கள் மற்றும் சேவைகளை மேம்படுத்துதல்."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"இருப்பிடச் சேவைகள்"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"இருப்பிடச் சேவைகள்"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"நேர மண்டலத்தை அமைக்க இருப்பிடத்தைப் பயன்படுத்துதல்"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"தானாக நேர மண்டலத்தை அமைக்க முடியாது"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"இருப்பிடம் அல்லது இருப்பிடச் சேவைகள் முடக்கப்பட்டுள்ளன"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"இருப்பிட அமைப்புகள்"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"இதைச் சரிசெய்"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"ரத்துசெய்"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"நேர மண்டலத்தைத் தானாகவே கண்டறிதல் முடக்கப்பட்டிருக்கும்போது கிடைக்காது"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"இருப்பிட நேர மண்டலத்தைக் கண்டறிதல் முடக்கப்பட்டுள்ளது"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"இருப்பிட நேர மண்டலத்தைக் கண்டறிதல் ஆதரிக்கப்படவில்லை"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"இருப்பிட நேர மண்டலத்தைக் கண்டறிதல் தொடர்பான மாற்றங்கள் அனுமதிக்கப்படவில்லை"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"உங்கள் சாதனத்தின் இருப்பிடம் கிடைத்தால், உங்கள் நேர மண்டலத்தை அமைக்க அது பயன்படுத்தப்படலாம்"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"சட்டத் தகவல், நிலை மற்றும் மென்பொருள் பதிப்பைக் காட்டு"</string>
     <string name="legal_information" msgid="7509900979811934843">"சட்டத் தகவல்"</string>
     <string name="manual" msgid="3651593989906084868">"கைமுறை"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"புரிந்தது"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"அறிவிப்புகள்"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"கால அளவு"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"மெசேஜஸ், நிகழ்வுகள் &amp; நினைவூட்டல்கள்"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"\'தொந்தரவு செய்ய வேண்டாம்\' ஆன் செய்யப்பட்டிருக்கும்போது நீங்கள் அனுமதித்தவை தவிர்த்து, மெசேஜஸ், நினைவூட்டல்கள், நிகழ்வுகள் ஆகியவை ஒலியடக்கப்படும். உங்களை நண்பர்களோ, குடும்பத்தினரோ, வேறு தொடர்புகளோ தொடர்புகொள்வதற்கு அனுமதிக்க, நீங்கள் மெசேஜஸ் அமைப்புகளை மாற்றிக்கொள்ளலாம்."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"முடிந்தது"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"அமைப்புகள்"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"அறிவிப்புகள் வரும்போது காட்டவோ ஒலியெழுப்பவோ வேண்டாம்"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"அறிவிப்புகள் வரும்போது ஒலியெழுப்ப வேண்டாம்"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"அறிவிப்புகளைப் பார்க்கவோ கேட்கவோ மாட்டீர்கள். நட்சத்திரமிட்ட தொடர்புகள் மற்றும் மீண்டும் அழைப்பவர்களிடமிருந்து வரும் அழைப்புகள் அனுமதிக்கப்படும்."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(தற்போதைய அமைப்பு)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"\'தொந்தரவு செய்ய வேண்டாம்\' அறிவிப்பு அமைப்புகளை மாற்றவா?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"பணிக் கணக்கு ஒலிகள்"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"தனிப்பட்ட சுயவிவரத்தின் ஒலிகளைப் பயன்படுத்து"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"தனிப்பட்ட கணக்கின் அதே ஒலிகளைப் பயன்படுத்தும்"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"அன்லாக் செய்ததும், கடைசியாகப் பயன்படுத்திய திரைக்குச் செல்லும். பூட்டுத்திரையில் அறிவிப்புகள் தோன்றாது. அவற்றைப் பார்க்க மேலிருந்து கீழே ஸ்வைப் செய்க."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"லாக் ஸ்கிரீன், லாக்ஸ்கிரீன், தவிர், தவிர்த்துச் செல்"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"பணிக் கணக்கு பூட்டியிருந்தால்"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"பூட்டுத் திரையில் அறிவிப்பைக் குறைத்தல்"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"பூட்டுத் திரையில் அறிவிப்புகளைக் குறைவாகக் காட்டும்"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"பூட்டுத் திரையில் புதிய அறிவிப்புகளை மட்டும் காட்டு"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"ஏற்கெனவே பார்த்த அறிவிப்புகளைப் பூட்டுத் திரையில் இருந்து தானாகவே அகற்றும்"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"லாக்ஸ்கிரீனில் அறிவிப்புகள்"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"முக்கியமான உரையாடல்கள்"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"ஏதுமில்லை"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{எதுவுமில்லை}=1{1 உரையாடல்}other{# உரையாடல்கள்}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"உரையாடல்களுக்கான அமைப்புகள்"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"யாரால் குறுக்கிட முடியும்?"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"மெசேஜிங் அல்லது அழைப்பு ஆப்ஸ் உங்களுக்கு அறிவிப்பு அனுப்பவில்லை என்றாலும், நீங்கள் இங்கே தேர்ந்தெடுத்துள்ளவர்களால் அந்த ஆப்ஸ் மூலம் உங்களைத் தொடர்புகொள்ள முடியும்"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"அழைப்புகள்"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"எவரிடம் இருந்தும்"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"தொடர்புகள்"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"நட்சத்திரமிட்ட தொடர்புகள்"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"தொடர்புகளுக்கான அமைப்புகள்"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"நட்சத்திரமிடப்பட்ட தொடர்புகளுக்கான அமைப்புகள்"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"ஏதுமில்லை"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"ஏதுமில்லை"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"அலாரங்கள்"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{எந்த ஆப்ஸும் குறுக்கிட முடியாது}=1{{app_1} குறுக்கிட முடியும்}=2{{app_1}, {app_2} ஆகியவை குறுக்கிட முடியும்}=3{{app_1}, {app_2}, {app_3} ஆகியவை குறுக்கிட முடியும்}other{{app_1}, {app_2} மற்றும் # ஆப்ஸ் குறுக்கிட முடியும்}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (பணி)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"கணக்கிடுகிறது…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"ஆப்ஸ் அமைப்புகள்"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ஆப்ஸை மீறிச் செயல்பட அனுமதிக்கின்றன"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"குறுக்கிட முடிகின்ற ஆப்ஸ்"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"பயன்முறை உருவாக்குதல்"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"பிரத்தியேகப் பயன்முறை"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"பயன்முறையின் பெயர்"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"ஐகானைத் தேர்வுசெய்யுங்கள்"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"கேலெண்டர் நிகழ்வுகள்"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"உறக்கநேர வழக்கம்"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"வாகனம் ஓட்டும்போது"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"நிர்வகிப்பது: <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"இயல்பாகத் திறத்தல்"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"ஆதரிக்கப்படும் இணைப்புகளைத் திறத்தல்"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"ஆப்ஸில்"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"உங்கள் பிரவுசரில்"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"இந்த ஆப்ஸில் வலை இணைப்புகளைத் திறக்கும் முறையைத் தேர்வுசெய்க"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"இந்த ஆப்ஸில் திறக்கப்பட வேண்டிய இணைப்புகள்"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"ஆதரிக்கப்படும் இணைப்புகள்"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"பிற இயல்பான விருப்பத்தேர்வுகள்"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"உங்கள் <xliff:g id="CARRIER_NAME">%1$s</xliff:g> திட்டம்"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"சாட்டிலைட் மெசேஜிங் உங்கள் கணக்கில் சேர்க்கப்பட்டுள்ளது"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"சாட்டிலைட் மெசேஜிங் உங்கள் கணக்கில் சேர்க்கப்படவில்லை"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"மேலும் அறிக"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"இது செயல்படும் விதம்"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"மொபைல் நெட்வொர்க் இல்லாதபோது"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"உங்கள் மொபைல் சாட்டிலைட்டுடன் தானாக இணைக்கப்படும். சிறந்த இணைப்பிற்கு வானம் தெளிவாகத் தெரியும் இடத்தில் வையுங்கள்."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR குறியீடு ஸ்கேனர்"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"உதவி தேவையா?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"அமைப்புகளைத் தேடுங்கள்"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"தொடர்புகள், சேமிப்பகம், கணக்கு"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"தொடர்புகள் சேமிப்பகம்"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"இயல்புநிலையாக எதுவும் அமைக்கப்படவில்லை"</string>
 </resources>
