--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"เชื่อมต่ออินเทอร์เน็ตขณะโรมมิ่ง"</string>
     <string name="roaming_disable" msgid="729512894708689604">"เชื่อมต่ออินเทอร์เน็ตขณะโรมมิ่ง"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"อาจมีค่าบริการโรมมิ่ง"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"วันที่และเวลาอัตโนมัติ"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"ตั้งค่าอัตโนมัติโดยใช้เครือข่ายและสัญญาณไร้สาย"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"เขตเวลาอัตโนมัติ"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"ตั้งค่าโดยอัตโนมัติตามเครือข่ายมือถือที่อยู่ใกล้คุณ"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"ตั้งค่าโดยอัตโนมัติโดยใช้ตำแหน่งของอุปกรณ์ หากมี และอาจต้องเชื่อมต่อ Wi-Fi อยู่"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"ใช้รูปแบบเริ่มต้นในท้องถิ่น"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"ใช้รูปแบบ 24 ชั่วโมง"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"เวลา"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ตั้งรูปแบบสำหรับพื้นที่ส่วนตัว"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ล็อก"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"ซ่อน"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"คุณสามารถเพิ่มได้ถึง <xliff:g id="COUNT">%d</xliff:g> ลายนิ้วมือ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"คุณได้เพิ่มลายนิ้วมือถึงขีดจำกัดสูงสุดแล้ว"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"เพิ่มลายนิ้วมืออีกไม่ได้แล้ว"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"ตรวจสอบรหัสผ่านและลองอีกครั้ง"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ติดต่อผู้ผลิตอุปกรณ์"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"ตรวจสอบการเชื่อมต่อแล้วลองอีกครั้ง"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"เลือกเครือข่าย"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"หากต้องการเชื่อมต่ออุปกรณ์ ให้เลือกเครือข่าย"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"เพิ่มอุปกรณ์นี้ไปยัง “<xliff:g id="SSID">%1$s</xliff:g>” ไหม"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"อนุญาตให้แอปและบริการต่างๆ สแกนหาอุปกรณ์ใกล้เคียงตลอดเวลา แม้บลูทูธจะปิดอยู่ การตั้งค่านี้ใช้เพื่อทำสิ่งต่างๆ เช่น ปรับปรุงฟีเจอร์และบริการตามสถานที่"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"บริการตำแหน่ง"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"บริการตำแหน่ง"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"ใช้ตำแหน่งสำหรับเขตเวลา"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"ตั้งค่าเขตเวลาโดยอัตโนมัติไม่ได้"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"ตำแหน่งหรือบริการตำแหน่งปิดอยู่"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"การตั้งค่าตำแหน่ง"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"แก้ไขปัญหานี้"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"ยกเลิก"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"ไม่พร้อมใช้งานเมื่อเขตเวลาอัตโนมัติปิดอยู่"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"การตรวจหาเขตเวลาของสถานที่ปิดอยู่"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"ไม่รองรับการตรวจหาเขตเวลาของสถานที่"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"ไม่อนุญาตให้เปลี่ยนแปลงการตรวจหาเขตเวลาของสถานที่"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"หากตำแหน่งของอุปกรณ์พร้อมใช้งาน ระบบอาจใช้ตำแหน่งดังกล่าวเพื่อตั้งค่าเขตเวลา"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"ดูข้อมูลกฎหมาย สถานะ รุ่นซอฟต์แวร์"</string>
     <string name="legal_information" msgid="7509900979811934843">"ข้อมูลทางกฎหมาย"</string>
     <string name="manual" msgid="3651593989906084868">"คู่มือ"</string>
@@ -2643,7 +2645,7 @@
     <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"จะเปิดเมื่อเหลือแบตเตอรี่ <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ตั้งกำหนดการ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ยืดอายุใช้งานแบตเตอรี่"</string>
-    <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ปิดเมื่อชาร์จแล้ว"</string>
+    <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ปิดเมื่อชาร์จ"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"ปิดที่ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"โหมดประหยัดแบตเตอรี่จะปิดเมื่อชาร์จแบตเตอรี่เกิน <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"รับทราบ"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"การแจ้งเตือน"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"ระยะเวลา"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"ข้อความ เหตุการณ์ และการช่วยเตือน"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"เมื่อเปิด \"ห้ามรบกวน\" ข้อความ การช่วยเตือน และเหตุการณ์ต่างๆ จะถูกปิดเสียงยกเว้นรายการที่คุณอนุญาตข้างต้น คุณปรับเปลี่ยนการตั้งค่าเพื่ออนุญาตให้เพื่อน ครอบครัว หรือรายชื่อติดต่อคนอื่นๆ ติดต่อคุณได้"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"เสร็จ"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"การตั้งค่า"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"ไม่แสดงภาพหรือเสียงเวลาแจ้งเตือน"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"ไม่มีเสียงเวลาแจ้งเตือน"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"คุณจะไม่เห็นหรือยินเสียงการแจ้งเตือน อนุญาตการโทรจากรายชื่อติดต่อที่ติดดาวและผู้โทรซ้ำ"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(การตั้งค่าปัจจุบัน)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"เปลี่ยนการตั้งค่าการแจ้งเตือนห้ามรบกวนไหม"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"เสียงในโปรไฟล์งาน"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"ใช้เสียงในโปรไฟล์ส่วนตัว"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"ใช้เสียงเดียวกับโปรไฟล์ส่วนตัว"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"ไปยังหน้าจอที่ใช้ล่าสุดโดยตรงหลังจากปลดล็อกแล้ว การแจ้งเตือนจะไม่แสดงบนหน้าจอล็อก ปัดลงจากด้านบนเพื่อดูการแจ้งเตือนเหล่านี้"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"หน้าจอล็อก, ข้าม, เลี่ยง"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"เมื่อโปรไฟล์งานล็อกอยู่"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"การแจ้งเตือนแบบเรียบง่ายบนหน้าจอล็อก"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"แสดงการแจ้งเตือนน้อยลงในหน้าจอล็อก"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"แสดงเฉพาะการแจ้งเตือนใหม่บนหน้าจอล็อก"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"นำการแจ้งเตือนที่ดูแล้วก่อนหน้านี้ออกจากหน้าจอล็อกโดยอัตโนมัติ"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"การแจ้งเตือนบนหน้าจอล็อก"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"การสนทนาสำคัญ"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"ไม่มี"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{ไม่มี}=1{การสนทนา 1 รายการ}other{การสนทนา # รายการ}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"การตั้งค่าการสนทนา"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"ผู้ที่รบกวนคุณได้"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"ผู้ที่คุณเลือกในส่วนนี้จะยังคงติดต่อคุณผ่านแอปการรับส่งข้อความหรือการโทรได้ แม้ว่าแอปเหล่านั้นจะแจ้งเตือนไม่ได้ก็ตาม"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"การโทร"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"ทุกคน"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"รายชื่อติดต่อ"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"รายชื่อติดต่อที่ติดดาว"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"การตั้งค่ารายชื่อติดต่อ"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"การตั้งค่ารายชื่อติดต่อที่ติดดาว"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"ไม่มี"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"ไม่มี"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"การปลุก"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{ไม่ให้แอปใดรบกวนเลย}=1{{app_1} รบกวนได้}=2{{app_1} และ {app_2} รบกวนได้}=3{{app_1}, {app_2} และ {app_3} รบกวนได้}other{{app_1}, {app_2} และอีก # แอปรบกวนได้}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (งาน)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"กำลังคำนวณ…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"การตั้งค่าแอป"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"อนุญาตให้แอปลบล้าง"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"แอปที่รบกวนคุณได้"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"สร้างโหมด"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"โหมดที่กำหนดเอง"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ชื่อโหมด"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"เลือกไอคอน"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"กิจกรรมในปฏิทิน"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"กิจวัตรเข้านอน"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"ขณะขับรถ"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"จัดการโดย <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"เปิดโดยค่าเริ่มต้น"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"เปิดลิงก์ที่รองรับ"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"ในแอป"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"ในเบราว์เซอร์"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"เลือกวิธีเปิดเว็บลิงก์สำหรับแอปนี้"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"ลิงก์ที่จะเปิดในแอปนี้"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"ลิงก์ที่รองรับ"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"ค่ากำหนดเริ่มต้นอื่นๆ"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"แพ็กเกจ <xliff:g id="CARRIER_NAME">%1$s</xliff:g> ของคุณ"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"การรับส่งข้อความผ่านดาวเทียมรวมอยู่ในบัญชีของคุณ"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"การรับส่งข้อความผ่านดาวเทียมไม่รวมอยู่ในบัญชีของคุณ"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"ดูข้อมูลเพิ่มเติม"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"วิธีการทำงาน"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"เมื่อคุณไม่มีเครือข่ายมือถือ"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"โทรศัพท์ของคุณจะเชื่อมต่อกับดาวเทียมโดยอัตโนมัติ โปรดอยู่ในพื้นที่ที่มองเห็นท้องฟ้าได้อย่างชัดเจนเพื่อรับการเชื่อมต่อที่ดีที่สุด"</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"ตัวสแกนคิวอาร์โค้ด"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"หากต้องการความช่วยเหลือ"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"ค้นหาในการตั้งค่า"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"รายชื่อติดต่อ พื้นที่เก็บข้อมูล บัญชี"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"พื้นที่เก็บข้อมูลรายชื่อติดต่อ"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"ไม่ได้ตั้งค่าบัญชีเริ่มต้น"</string>
 </resources>
