--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Kumonekta sa mga serbisyo ng data kapag naka-roaming"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Kumonekta sa mga serbisyo ng data kapag naka-roaming"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Puwedeng magkaroon ng mga singil sa roaming."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Awtomatikong petsa at oras."</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Awtomatikong itakda gamit ang iyong network at mga wireless na signal"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Awtomatikong time zone"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Awtomatikong itakda batay sa mga mobile network na malapit sa iyo"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Awtomatikong itakda gamit ang lokasyon ng device kung available Baka kailangan ng koneksyon sa Wifi."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Gamitin ang lokal na default"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"Gamitin ang format na 24-oras"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Oras"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Magtakda ng pattern sa pribadong space"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"I-lock"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Itago"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Puwede kang magdagdag ng hanggang <xliff:g id="COUNT">%d</xliff:g> (na) fingerprint"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Naidagdag mo na ang maximum na bilang ng mga fingerprint"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Hindi na makapagdagdag ng higit pang fingerprint"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Suriin ang password at subukan ulit"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Makipag-ugnayan sa manufacturer ng device"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Suriin ang koneksyon at subukan ulit"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Pumili ng network"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Para maikonekta ang iyong device, pumili ng network"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Idagdag ang device na ito sa “<xliff:g id="SSID">%1$s</xliff:g>”?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Payagan ang mga app at serbisyo na mag-scan ng mga kalapit na device anumang oras, kahit na naka-off ang Bluetooth. Magagamit ito, halimbawa, para pahusayin ang mga feature at serbisyong batay sa lokasyon."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Mga serbisyo ng lokasyon"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Mga serbisyo ng lokasyon"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Gamitin ang lokasyon para sa time zone"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Hindi awtomatikong maitakda ang time zone"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Naka-off ang Lokasyon o Mga Serbisyo ng Lokasyon"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Mga setting ng lokasyon"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Ayusin ito"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Kanselahin"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Hindi available kapag naka-off ang awtomatikong time zone"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Naka-disable ang pag-detect ng time zone gamit ang lokasyon"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Hindi sinusuportahan ang pag-detect ng time zone gamit ang lokasyon"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Hindi pinapayagan ang mga pagbabago sa pag-detect ng time zone gamit ang lokasyon"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Kung available ang lokasyon ng iyong device, posibleng gamitin ito para itakda ang time zone mo"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Tingnan ang impormasyong legal, katayuan, bersyon ng software"</string>
     <string name="legal_information" msgid="7509900979811934843">"Legal na impormasyon"</string>
     <string name="manual" msgid="3651593989906084868">"Manual"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"OK"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Mga Notification"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Tagal"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Mga mensahe, event, at paalala"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Kapag naka-on ang Huwag Istorbohin, mamu-mute ang mga mensahe, paalala, at event, maliban sa mga item na pinapayagan mo sa itaas. Maaari mong isaayos ang mga setting ng mga mensahe para payagan ang iyong mga kaibigan, pamilya, o iba pang contact na makipag-ugnayan sa iyo."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Tapos na"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Mga Setting"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Walang visual o tunog mula sa mga notification"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Walang tunog mula sa mga notification"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Wala kang makikita o maririnig na mga notification. Pinapayagan ang mga tawag mula sa mga naka-star na contact at umuulit na tumatawag."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Kasalukuyang setting)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Baguhin ang mga setting ng notification na Huwag Istorbohin?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Mga tunog sa profile sa trabaho"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Gamitin ang tunog sa personal na profile"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Gamitin ang mga tunog na ginagamit din sa iyong personal na profile"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Pagka-unlock, direktang pumunta sa huling screen. Hindi ipapakita sa lock screen ang mga notification. Mag-swipe pababa para makita ang mga ito."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Lock screen, Lockscreen, Laktawan, I-bypass"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Kapag naka-lock ang work profile"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Pag-minimalize ng notification sa lock screen"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Magpakita ng mas kaunting notification sa lock screen"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Ipakita ang mga bagong notification lang sa lock screen"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Awtomatikong alisin ang mga natingnan nang notification sa lock screen"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Mga notification sa lock screen"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"mga priyoridad na pag-uusap"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Wala"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Wala}=1{1 pag-uusap}one{# pag-uusap}other{# na pag-uusap}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Mga setting ng mga pag-uusap"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Sino ang puwedeng umabala"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Kahit na hindi ka mabigyan ng notification ng mga app sa pagmemensahe o pagtawag, maaabot ka pa rin ng mga taong pipiliin mo rito sa pamamagitan ng mga app na iyon"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Mga Tawag"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Sinuman"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Mga Contact"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Mga naka-star na contact"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Mga setting ng mga contact"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Mga setting ng mga naka-star na contact"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Wala"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Wala"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Mga Alarm"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Walang app na puwedeng makaabala}=1{Puwedeng makaabala ang {app_1}}=2{Puwedeng makaabala ang {app_1} at {app_2}}=3{Puwedeng makaabala ang {app_1}, {app_2}, at {app_3}}one{Puwedeng makaabala ang {app_1}, {app_2}, at # pa}other{Puwedeng makaabala ang {app_1}, {app_2}, at # pa}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (Trabaho)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Nagkakalkula…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Mga setting ng mga app"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Payagan ang mga app na mag-override"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Mga app na puwedeng umabala"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Gumawa ng mode"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Custom na mode"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Pangalan ng mode"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Pumili ng icon"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Mga event sa kalendaryo"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Routine sa oras ng pagtulog"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"Habang nagmamaneho"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Pinapamahalaan ng <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Buksan bilang default"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Buksan ang mga sinusuportahang link"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"Sa app"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"Sa iyong browser"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Piliin kung paano magbukas ng web link para sa app na ito"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Mga link na bubuksan sa app na ito"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Mga sinusuportahang link"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Iba pang default na kagustuhan"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Ang iyong plan sa <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Kasama ang satellite na pagmemensahe sa iyong account"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Hindi kasama ang satellite na pagmemensahe sa iyong account"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Matuto Pa"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Paano ito gumagana"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Kapag wala kang mobile network"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Awomatikong kokonekta ang iyong telepono sa satellite. Para sa pinakamahusay na koneksyon, manatili sa kung saan may malinaw na view ng kalangitan."</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Scanner ng QR code"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Kailangan ng tulong?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Maghanap sa Mga Setting"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"mga contact, storage, account"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Storage ng mga contact"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Walang itinakdang default"</string>
 </resources>
