--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"Підключатися до служб передавання даних у роумінгу"</string>
     <string name="roaming_disable" msgid="729512894708689604">"Підключатися до служб передавання даних у роумінгу"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"Може стягуватися плата за роумінг."</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"Автоматичні дата й час"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"Визначати автоматично за допомогою мережі й бездротових сигналів"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"Автоматичний часовий пояс"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"Визначати автоматично на основі мобільних мереж поблизу"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"Визначати автоматично на основі геоданих пристрою (якщо доступно). Також може знадобитися активне з’єднання Wi-Fi."</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"Використовувати місцеві налаштування за умовчанням"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24-годинний формат"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"Час"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Налаштуйте ключ для особистого простору"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Заблокувати"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Приховати"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Можна додати максимум стільки відбитків: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Ви додали максимальну кількість відбитків пальців"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Більше не можна додати відбитки пальців"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Перевірте пароль і повторіть спробу"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Зв\'яжіться з виробником пристрою"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Перевірте підключення й повторіть спробу"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Вибрати мережу"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Виберіть мережу, до якої потрібно підключити пристрій"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Додати цей пристрій до мережі \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Дозволити додаткам і сервісам будь-коли шукати пристрої поруч, навіть якщо Bluetooth вимкнено. Це може покращити роботу функцій і сервісів, які використовують геодані."</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"Геолокація"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"Геолокація"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"Визначати часовий пояс на основі геоданих"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"Не вдається встановити часовий пояс автоматично"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"Доступ до геоданих або геолокацію вимкнено"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"Доступ до моїх геоданих"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"Виправити"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"Скасувати"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"Недоступно, якщо автоматичне визначення часового поясу вимкнено"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"Визначення часового поясу за допомогою геолокації вимкнено"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"Визначення часового поясу за допомогою геолокації не підтримується"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"Ви не можете змінити налаштування визначення часового поясу за допомогою геолокації"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"Якщо дані про місцеположення пристрою доступні, на їх основі може визначатися ваш часовий пояс"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Переглянути правову інф-ю, стан, версію ПЗ"</string>
     <string name="legal_information" msgid="7509900979811934843">"Правова інформація"</string>
     <string name="manual" msgid="3651593989906084868">"Посібник"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"OK"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"Сповіщення"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"Тривалість"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"Повідомлення, події й нагадування"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"У режимі \"Не турбувати\" сигнали повідомлень, нагадувань і подій буде вимкнено (окрім дозволених вище). Можна змінити налаштування повідомлень, щоб ваші друзі, члени сім’ї й інші контакти могли зв’язатися з вами."</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"Готово"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"Налаштування"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Вимкнути зображення й звук сповіщень"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Вимкнути звук сповіщень"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Ви не зможете бачити або чути сповіщення. Дозволено виклики від контактів із зірочкою та постійних абонентів."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Поточне налаштування)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Змінити налаштування сповіщень у режимі \"Не турбувати\"?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Звуки робочого профілю"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Звуки особистого профілю"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Виберіть цей параметр, щоб використовувати ті самі звуки, що й в особистому профілі"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"Після розблокування відкриється останній екран. На заблокованому екрані не буде сповіщень. Щоб переглянути їх, проведіть пальцем униз від верху."</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Заблокований екран, екран блокування, пропустити, обходити"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Коли робочий профіль заблоковано"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"Мінімізація сповіщень на заблокованому екрані"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"Показувати менше сповіщень на заблокованому екрані"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"Показувати лише нові сповіщення на заблокованому екрані"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"Автоматично видаляти переглянуті сповіщення із заблокованого екрана"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Сповіщення на заблокованому екрані"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"важливі розмови"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Не дозволено"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Немає}=1{1 чат}one{# чат}few{# чати}many{# чатів}other{# чату}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Налаштування розмов"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Хто може турбувати"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Навіть якщо сповіщення з додатків для обміну повідомленнями або дзвінків не надходитимуть, вибрані тут користувачі все одно зможуть зв’язуватися з вами через ці додатки"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Дзвінки"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Усі"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Контакти"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Контакти із зірочками"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Налаштування контактів"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Налаштування контактів із зірочкою"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Не дозволено"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Не дозволено"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Будильник"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Додатки не можуть переривати}=1{Додаток {app_1} може переривати}=2{Додатки {app_1} і {app_2} можуть переривати}=3{Додатки {app_1}, {app_2} і {app_3} можуть переривати}one{Додатки {app_1}, {app_2} і ще # можуть переривати}few{Додатки {app_1}, {app_2} і ще # можуть переривати}many{Додатки {app_1}, {app_2} і ще # можуть переривати}other{Додатки {app_1}, {app_2} і ще # можуть переривати}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (робочий)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Обчислення…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Налаштування для додатків"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+<xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дозволити додаткам замінювати режим \"Не турбувати\""</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Додатки, які можуть переривати"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Створення режиму"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Спеціальний режим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Назва режиму"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Виберіть значок"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Події в календарі"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Програма \"Час спати\""</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"За кермом"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"Керує додаток <xliff:g id="ADMIN_APP_LABEL">%s</xliff:g>"</string>
     <string name="launch_by_default" msgid="892824422067985734">"Відкривати за умовчанням"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"Відкривати підтримувані посилання"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"У додатку"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"У вебпереглядачі"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"Виберіть, як відкривати вебпосилання в цьому додатку"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"Посилання, що мають відкриватися в цьому додатку"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"Підтримувані посилання"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"Інші стандартні налаштування"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"Ваш план оператора <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"Послугу обміну повідомленнями через супутник включено у ваш обліковий запис"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"Послугу обміну повідомленнями через супутник не включено у ваш обліковий запис"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"Докладніше"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"Як це працює"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"Коли мобільна мережа недоступна"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"Ваш телефон автоматично підключатиметься до супутника. Для кращого зв’язку вийдіть на відкрите місце (без накриття)."</string>
@@ -5454,10 +5450,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Сканер QR-коду"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Потрібна допомога?"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"Шукати в налаштуваннях"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"контакти, пам’ять, обліковий запис"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Пам’ять контактів"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Немає параметра за умовчанням"</string>
 </resources>
