--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -246,16 +246,11 @@
     <string name="roaming_enable" msgid="7845716016861535340">"رومنگ کے وقت ڈیٹا سروسز سے مربوط ہوں"</string>
     <string name="roaming_disable" msgid="729512894708689604">"رومنگ کے وقت ڈیٹا سروسز سے مربوط ہوں"</string>
     <string name="roaming_warning" msgid="7703647889040229013">"رومنگ چارجز لاگو ہو سکتے ہیں۔"</string>
-    <!-- no translation found for date_time_auto (1759599045100040686) -->
-    <skip />
-    <!-- no translation found for date_time_auto_summary (8294938565417729698) -->
-    <skip />
-    <!-- no translation found for zone_auto_title (3520584257065861479) -->
-    <skip />
-    <!-- no translation found for zone_auto_title_summary (6540356783943375071) -->
-    <skip />
-    <!-- no translation found for auto_zone_requires_location_summary (8751995978350701451) -->
-    <skip />
+    <string name="date_time_auto" msgid="1759599045100040686">"خودکار تاریخ اور وقت"</string>
+    <string name="date_time_auto_summary" msgid="8294938565417729698">"اپنے نیٹ ورک اور وائرلیس سگنلز کا استعمال کرتے ہوئے خود بخود سیٹ کریں"</string>
+    <string name="zone_auto_title" msgid="3520584257065861479">"خودکار ٹائم زون"</string>
+    <string name="zone_auto_title_summary" msgid="6540356783943375071">"اپنے قریب کے موبائل نیٹ ورکس کی بنیاد پر خود بخود سیٹ کریں"</string>
+    <string name="auto_zone_requires_location_summary" msgid="8751995978350701451">"‏دستیاب ہونے پر اپنے آلہ کا مقام استعمال کرتے ہوئے خود بخود سیٹ کریں۔ ایک فعال WiFi کنکشن بھی درکار ہو سکتا ہے۔"</string>
     <string name="date_time_24hour_auto" msgid="6583078135067804252">"مقامی ڈیفالٹ کا استعمال کریں"</string>
     <string name="date_time_24hour" msgid="286679379105653406">"24 گھنٹے کا فارمیٹ استعمال کریں"</string>
     <string name="date_time_set_time_title" msgid="2870083415922991906">"وقت"</string>
@@ -664,6 +659,12 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"اپنی پرائیویٹ اسپیس کے لیے پیٹرن سیٹ کریں"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"مقفل کرنا"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"پوشیدہ کرنا"</string>
+    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
+    <skip />
+    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"آپ <xliff:g id="COUNT">%d</xliff:g> فنگر پرنٹس شامل کر سکتے ہیں"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"آپ فنگر پرنٹس کی زیادہ سے زیادہ تعداد شامل کر چکے ہیں"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"مزید فنگر پرنٹس شامل نہیں کر سکتے"</string>
@@ -1031,6 +1032,10 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"پاس ورڈ چیک کریں اور دبارہ کوشش کریں"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"آلہ کے مینوفیکچرر سے رابطہ کریں"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"کنکشن چیک کریں اور دوبارہ کوشش کریں"</string>
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
+    <skip />
+    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
+    <skip />
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"نیٹ ورک منتخب کریں"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"اپنے آلہ کو منسلک کرنے کے لیے نیٹ ورک منتخب کریں"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"کیا اس آلہ کو \"<xliff:g id="SSID">%1$s</xliff:g>\" سے منسلک کریں؟"</string>
@@ -1630,8 +1635,7 @@
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"بلوٹوتھ کے آف ہونے پر بھی ایپس اور سروسز کو کسی بھی وقت قریبی آلات اسکین کرنے کی اجازت دیں۔ مثال کے طور، اسے مقام پر مبنی خصوصیات اور سروسز کو بہتر بنانے کے لیے استعمال کیا جا سکتا ہے۔"</string>
     <string name="location_services_preference_title" msgid="604317859531782159">"مقام کی سروسز"</string>
     <string name="location_services_screen_title" msgid="5640002489976602476">"مقام کی سروسز"</string>
-    <!-- no translation found for location_time_zone_detection_toggle_title (720338048522014712) -->
-    <skip />
+    <string name="location_time_zone_detection_toggle_title" msgid="720338048522014712">"ٹائم زون کے لیے مقام کا استعمال کریں"</string>
     <string name="location_time_zone_detection_status_title" msgid="8903495354385600423">"خودکار طور پر ٹائم زون سیٹ نہیں کیا جا سکتا"</string>
     <string name="location_time_zone_detection_status_summary_degraded_by_settings" msgid="6198939835335841106"></string>
     <string name="location_time_zone_detection_status_summary_blocked_by_settings" msgid="5276280770344278768">"مقام یا مقام کی سروسز آف ہیں"</string>
@@ -1642,13 +1646,11 @@
     <string name="location_time_zone_detection_location_is_off_dialog_ok_button" msgid="2685647335717750297">"مقام کی ترتیبات"</string>
     <string name="location_time_zone_provider_fix_dialog_ok_button" msgid="9026666001835079126">"اسے درست کریں"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_cancel_button" msgid="3968729678789071154">"منسوخ کریں"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_off (4785540862935730060) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_off" msgid="4785540862935730060">"خودکار ٹائم زون آف ہونے پر دستیاب نہیں ہے"</string>
     <string name="location_time_zone_detection_not_applicable" msgid="6757964612836952714">"مقام کے ٹائم زون کی شناخت غیر فعال ہے"</string>
     <string name="location_time_zone_detection_not_supported" msgid="3251181656388306501">"مقام کے ٹائم زون کی شناخت تعاون یافتہ نہیں ہے"</string>
     <string name="location_time_zone_detection_not_allowed" msgid="8264525161514617051">"مقام کے ٹائم زون کی شناخت کی تبدیلیوں کی اجازت نہیں ہے"</string>
-    <!-- no translation found for location_time_zone_detection_auto_is_on (1837317773761632655) -->
-    <skip />
+    <string name="location_time_zone_detection_auto_is_on" msgid="1837317773761632655">"اگر آپ کے آلے کا مقام دستیاب ہے تو اسے آپ کا ٹائم زون سیٹ کرنے کے لیے استعمال کیا جا سکتا ہے"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"قانونی معلومات، اسٹیٹس، سافٹ ویئر ورژن دیکھیں"</string>
     <string name="legal_information" msgid="7509900979811934843">"قانونی معلومات"</string>
     <string name="manual" msgid="3651593989906084868">"مینوئل"</string>
@@ -3519,15 +3521,6 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"سمجھ آ گئی"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"اطلاعات"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"مدت"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"پیغامات، ایونٹس اور یاد دہانیاں"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"\'ڈسٹرب نہ کریں\' آن ہونے پر، پیغامات، یاد دہانیاں اور ایونٹس خاموش کر دئے جائیں گے، سوائے ان آئٹمز کے جن کی آپ نے اوپر اجازت دی ہے۔ اپنے دوستوں، فیملی اور دیگر رابطوں کو آپ سے رابطہ کرنے کی اجازت دینے کیلئے، آپ پیغامات کی ترتیبات کو ایڈجسٹ کر سکتے ہیں۔"</string>
-    <string name="zen_onboarding_ok" msgid="8764248406533833392">"ہو گیا"</string>
-    <string name="zen_onboarding_settings" msgid="2815839576245114342">"ترتیبات"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"اطلاعات کی کوئی ویزوئل یا آواز نہیں"</string>
-    <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"اطلاعات کی کوئی آواز نہیں"</string>
-    <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"آپ کو ستارے کے نشان والے رابطوں اور بار بار کال کرنے والے مجاز لوگوں کی طرف سے اطلاعات، کالز نظر نہیں آئیں گی یا سنائی نہيں دیں گی۔"</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(موجودہ ترتیب)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"\'ڈسٹرب نہ کریں\' کی اطلاع کی ترتیبات کو تبدیل کریں؟"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"دفتری پروفائل کی آوازیں"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"ذاتی پروفائل کی آوازیں استعمال کریں"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"اپنی ذاتی پروفائل کی طرح ہی آوازوں کا استعمال کریں"</string>
@@ -3596,6 +3589,8 @@
     <string name="lockscreen_bypass_summary" msgid="4578154430436224161">"غیر مقفل کرنے کے بعد، براہ راست آخری بار استعمال کردہ اسکرین پر جائیں۔ اطلاعات لاک اسکرین پر نہیں دکھائی دیں گی۔ انہیں دیکھنے کیلئے اوپر سے نیچے سوائپ کریں۔"</string>
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"مقفل اسکرین، لاک اسکرین، نظر انداز کریں، بائی پاس کریں"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"دفتری پروفائل مقفل ہونے پر"</string>
+    <string name="lock_screen_notif_minimalism" msgid="5556871004042668149">"مقفل اسکرین پر کم اطلاع دکھانے کا اختیار"</string>
+    <string name="lock_screen_notif_minimalism_summary" msgid="4607237285421814421">"مقفل اسکرین پر کم اطلاعات دکھائیں"</string>
     <string name="unseen_notifs_lock_screen" msgid="6910701117021324612">"مقفل اسکرین پر صرف نئی اطلاعات دکھائیں"</string>
     <string name="unseen_notifs_lock_screen_summary" msgid="5996722793868021391">"مقفل اسکرین سے گزشتہ طور پر دیکھی گئی اطلاعات کو خودکار طور پر ہٹا دیں"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"لاک اسکرین پر اطلاعات"</string>
@@ -3813,6 +3808,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"ترجیحی گفتگوئیں"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"کوئی نہیں"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{کوئی نہیں}=1{1 گفتگو}other{# گفتگوئیں}}"</string>
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"گفتگوؤوں کی ترتیبات"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"کون رکاوٹ ڈال سکتا ہے"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"اگرچہ پیغام رسانی یا کالنگ ایپس آپ کو اطلاع نہیں دے سکتیں اس کے باوجود بھی آپ کے منتخب کردہ لوگ یہاں ان ایپس کے ذریعے آپ سے رابطہ کر سکتے ہیں"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"کالز"</string>
@@ -3836,6 +3832,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"کوئی بھی"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"رابطے"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"ستارہ کا نشان لگے ہوئے رابطے"</string>
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"رابطے کی ترتیبات"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"ستارہ لگے ہوئے رابطوں کی ترتیبات"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"کوئی نہیں"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"کوئی نہیں"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"الارمز"</string>
@@ -3865,6 +3863,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{کوئی ایپ رکاوٹ نہیں ڈال سکتی}=1{{app_1} رکاوٹ ڈال سکتی ہے}=2{{app_1} اور {app_2} رکاوٹ ڈال سکتی ہیں}=3{{app_1}، {app_2} اور{app_3} رکاوٹ ڈال سکتی ہیں}other{{app_1}، {app_2} اور # مزید رکاوٹ ڈال سکتی ہیں}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (دفتری)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"حساب لگایا جا رہا ہے…"</string>
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"اپپ کی ترتیبات"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"<xliff:g id="NUMBER">%d</xliff:g>+"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ایپس کو اوور رائیڈ کرنے کی اجازت دیں"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو مداخلت کر سکتی ہیں"</string>
@@ -3907,8 +3906,9 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"وضع تخلیق کریں"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"حسب ضرورت موڈ"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"موڈ کا نام"</string>
-    <!-- no translation found for zen_mode_edit_choose_icon_title (6452801577128788362) -->
+    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
     <skip />
+    <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"ایک آئیکن منتخب کریں"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"کیلنڈر ایونٹس"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"بیڈ ٹائم روٹین"</string>
     <string name="zen_mode_trigger_title_driving" msgid="7890990983453164403">"ڈرائیونگ کے دوران"</string>
@@ -3978,12 +3978,9 @@
     <string name="managing_admin" msgid="2633920317425356619">"<xliff:g id="ADMIN_APP_LABEL">%s</xliff:g> کے زیر انتظام ہے"</string>
     <string name="launch_by_default" msgid="892824422067985734">"بطور ڈیفالٹ کھولیں"</string>
     <string name="app_launch_open_domain_urls_title" msgid="4805388403977096285">"تعاون یافتہ لنکس کھولیں"</string>
-    <!-- no translation found for app_launch_open_in_app (2208182888681699512) -->
-    <skip />
-    <!-- no translation found for app_launch_open_in_browser (766170191853009756) -->
-    <skip />
-    <!-- no translation found for app_launch_top_intro_message (9037324384325518290) -->
-    <skip />
+    <string name="app_launch_open_in_app" msgid="2208182888681699512">"ایپ میں"</string>
+    <string name="app_launch_open_in_browser" msgid="766170191853009756">"آپ کے براؤزر میں"</string>
+    <string name="app_launch_top_intro_message" msgid="9037324384325518290">"اس ایپ کے لیے ویب لنکس کھولنے کا طریقہ منتخب کریں"</string>
     <string name="app_launch_links_category" msgid="2380467163878760037">"اس ایپ میں کھلنے والے لنکس"</string>
     <string name="app_launch_supported_domain_urls_title" msgid="5088779668667217369">"تعاون یافتہ لنکس"</string>
     <string name="app_launch_other_defaults_title" msgid="5674385877838735586">"دیگر ڈیفالٹ ترجیحات"</string>
@@ -4814,8 +4811,7 @@
     <string name="category_title_your_satellite_plan" msgid="3017895097366691841">"آپ کا <xliff:g id="CARRIER_NAME">%1$s</xliff:g> پلان"</string>
     <string name="title_have_satellite_plan" msgid="2048372355699977947">"سیٹلائٹ پیغام رسانی آپ کے اکاؤنٹ کے ساتھ شامل ہے"</string>
     <string name="title_no_satellite_plan" msgid="2876056203035197505">"سیٹلائٹ پیغام رسانی آپ کے اکاؤنٹ میں شامل نہیں ہے"</string>
-    <!-- no translation found for summary_add_satellite_setting (190359698593056946) -->
-    <skip />
+    <string name="summary_add_satellite_setting" msgid="190359698593056946">"مزید جانیں"</string>
     <string name="category_name_how_it_works" msgid="585303230539269496">"اس کے کام کرنے کا طریقہ"</string>
     <string name="title_satellite_connection_guide" msgid="3294802307913609072">"آپ کے پاس موبائل نیٹ ورک نہ ہونے پر"</string>
     <string name="summary_satellite_connection_guide" msgid="3496123195218418456">"آپ کا فون سیٹلائٹ سے خودکار طور پر منسلک ہو جائے گا۔ بہترین کنکشن کے لیے، ایسی جگہ رہیں جہاں آسمان صاف نظر آ رہا ہو۔"</string>
@@ -5452,10 +5448,7 @@
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"‏QR کوڈ اسکینر"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"مدد درکار ہے؟"</annotation></string>
     <string name="homepage_search" msgid="6759334912284663559">"تلاش کی ترتیبات"</string>
-    <!-- no translation found for keywords_contacts_storage (9061213057165337893) -->
-    <skip />
-    <!-- no translation found for contacts_storage_settings_title (1574030546525203810) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set (1548101985417720782) -->
-    <skip />
+    <string name="keywords_contacts_storage" msgid="9061213057165337893">"رابطے، اسٹوریج، اکاؤنٹ"</string>
+    <string name="contacts_storage_settings_title" msgid="1574030546525203810">"رابطوں کی اسٹوریج"</string>
+    <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"کوئی ڈیفالٹ سیٹ نہیں ہے"</string>
 </resources>
