Rename system caption "Text size" to "Caption size".
Change-Id: I8ee4b4c5d3393827240b1c9f757efb0dc85d40e8
Fix: 295665940
Test: strings only
Flag: EXEMPT resource only update

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5639,7 +5639,7 @@
     <!-- Title for the preference to change video caption locale. [CHAR LIMIT=35] -->
     <string name="captioning_locale">Language</string>
     <!-- Title for the preference to change video caption text size. [CHAR LIMIT=35] -->
-    <string name="captioning_text_size">Text size</string>
+    <string name="captioning_text_size">Caption size</string>
     <!-- Title for the preference category containing video caption property presets. [CHAR LIMIT=35] -->
     <string name="captioning_preset">Caption style</string>
     <!-- Title for the preference catgeory containing custom video caption properties. [CHAR LIMIT=35] -->
